--- a/stories/bn/0294_দাদীমার-কলা_slides.html
+++ b/stories/bn/0294_দাদীমার-কলা_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Ferien mit Großmutter - Global African Storybook</title>
+  <title>দাদীমার কলা - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="ferien-mit-großmutter" class="slide level1">
-<h1>Ferien mit Großmutter</h1>
+<section id="দদমর-কল" class="slide level1">
+<h1>দাদীমার কলা</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/02.jpg" /></p>
-<p>Odongo und Apiyo lebten mit ihrem Vater in der Stadt. Sie freuten sich auf die Ferien. Nicht nur weil sie dann nicht in die Schule mussten, sondern auch weil sie dann ihre Großmutter besuchen würden. Sie lebte in einem Fischerdorf in der Nähe eines großen Sees.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/02.jpg" /></p>
+<p>দাদীমার জোয়ার, বাজরা এবং কাসাভা পূর্ণ চমৎকার একটি বাগান ছিল। কিন্তু সব থেকে ভাল ছিল কলা। যদিও দাদীমার অনেক নাতিনাতনি ছিল, আমি গোপনে গোপনে জানতাম যে আমি তাঁর সবচেয়ে প্রিয়। তিনি আমাকে প্রায়ই তাঁর বাড়িতে আমন্ত্রণ জানাতেন। তিনি আমার সাথে ছোট ছোট গোপন কথাগুলোও বলতেন। কিন্তু একটি গোপন কথা তিনি আমাকে বলেননি, তা হল তিনি কোথায় কলা পাকাতেন।</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/03.jpg" /></p>
-<p>Odongo und Apiyo freuten sich, dass es Zeit war ihre Großmutter zu besuchen. Am Abend davor packten sie ihre Taschen und bereiteten sich für die lange Reise zu ihrem Dorf vor. Sie konnten nicht schlafen und redeten die ganze Nacht über den Urlaub.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/03.jpg" /></p>
+<p>একদিন আমি দাদীমার বাড়ির বাহিরে সূর্যের তাপে রাখা একটি খড়ের ঝুড়ি দেখতে পেলাম। আমি যখন ঝুড়িটি কিসের জন্য তা জিজ্ঞাসা করলাম, তখন আমি শুধু একটি উত্তর পেলাম, &quot;এটি আমার যাদুর ঝুড়ি।&quot; ঝুড়িটির পাশে বেশ কিছু কলাপাতা ছিল যা দাদীমা সময়ে সময়ে উল্টে দিতেন। আমি অনেক উৎসুক ছিলাম। আমি জিজ্ঞেস করলাম, &quot;পাতাগুলো কিসের জন্য, দাদীমা?&quot; আমি শুধু একটি উত্তর পেলাম, &quot;এইগুলি আমার যাদুর পাতা।&quot;</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/04.jpg" /></p>
-<p>Früh am nächsten Morgen machten sie sich im Auto ihres Vaters zum Dorf auf. Sie fuhren an Bergen, wilden Tieren und Teeplantagen vorbei. Sie zählten Autos und sangen Lieder.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/04.jpg" /></p>
+<p>দাদীমাকে, কলাপাতাগুলোকে, এবং বড় খড়ের ঝুড়িটিকে দেখতে আমার অনেক আকর্ষণীও লাগছিল। কিন্তু দাদীমা আমাকে একটি কাজ করার জন্য মার কাছে পাঠিয়ে দিলেন। &quot;দাদীমা, অনুগ্রহ করে আমাকে এটি প্রস্তুত করা দেখতে দিন...&quot; &quot;জিদ করোনা বাচ্চা, তোমাকে যা করতে বলা হয়েছে তা কর,&quot; তিনি জোর দিয়ে বললেন। আমি দৌড় দিলাম।</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/05.jpg" /></p>
-<p>Nach einer Weile waren die Kinder müde und schliefen ein.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/05.jpg" /></p>
+<p>যখন আমি ফিরলাম, দাদীমা বাহিরে বসে ছিলেন, কিন্তু তাঁর সাথে না ঝুড়ি ছিল না কলা। &quot;দাদীমা, ঝুড়িটি কোথায়, কলাগুলো কোথায়, এবং কোথায়...&quot; কিন্তু আমি শুধু একটি উত্তর পেলাম, &quot;ওগুলি আমার যাদুর স্থানে রাখা আছে।&quot; এটি খুব হতাশাজনক ছিল!</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/06.jpg" /></p>
-<p>Vater weckte Odongo und Apiyo, als sie im Dorf ankamen. Nyar-Kanyada, ihre Großmutter, lag auf einer Matte unter einem Baum und entspannte. Nyar-Kanyada in Luo bedeutet „Tochter des Volkes von Kanyada“. Sie war eine schöne und starke Frau.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/06.jpg" /></p>
+<p>দু'দিন পর, দাদীমা আমাকে তাঁর শোবার ঘরে তাঁর ছড়ি আনতে পাঠালেন। আমি যেই দরজা খুললাম, আমাকে পাকা কলার মৌ মৌ গন্ধ স্বাগত জানাল। ভিতরের কক্ষে দাদীমার বড় যাদুর ঝুড়িটি রাখা ছিল। এটি একটি পুরনো কম্বল দিয়ে ভালভাবে আবৃত করা ছিল। আমি এটিকে উঁচু করে সেই মহিমান্বিত গন্ধ শুঁকলাম।</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/07.jpg" /></p>
-<p>Nyar-Kanyada bat sie ins Haus und tanzte freudig im Zimmer herum. Ihre Enkelkinder überreichten ihr begeistert ihre Geschenke. „Öffne mein Geschenk zuerst“, meinte Odongo. „Nein, meins zuerst!“, entgegnete Apiyo.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/07.jpg" /></p>
+<p>দাদীমার কণ্ঠস্বর আমাকে হকচকিয়ে দিল যখন তিনি আমাকে ডাকলেন, &quot;তুমি কি করছ? জলদি করে আমার ছড়ি নিয়ে আস।&quot; আমি তাঁর ছড়ি নিয়ে তড়িঘড়ি করে বাহিরে গেলাম। &quot;তুমি কেন হাসছ?&quot; দাদীমা জিজ্ঞেস করলেন। দাদীমার প্রশ্ন আমাকে উপলব্ধি করাল যে আমি তাঁর যাদুর স্থানের সন্ধান পাওয়াতে তখনো হেসে যাচ্ছিলাম।</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/08.jpg" /></p>
-<p>Nachdem sie die Geschenke geöffnet hatte, segnete Nyar-Kanyada ihre Enkelkinder auf traditionelle Art.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/08.jpg" /></p>
+<p>পরদিন যখন দাদীমা আমার মার সাথে দেখা করতে আসলেন, আমি কলাগুলো আবার পরীক্ষা করে দেখার জন্য তাঁর বাড়িতে ছুটে গেলাম। সেখানে কিছু কলার কাঁদি অনেক পাকা ছিল। আমি একটি কলা নিয়ে আমার জামার ভিতরে লুকিয়ে ফেললাম। ঝুড়িটি আবার আবৃত করে আমি বাড়ির পিছনে গেলাম এবং দ্রুত তা খেয়ে ফেললাম। এটি আমার খাওয়া সবচেয়ে মিষ্টি কলা ছিল।</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/09.jpg" /></p>
-<p>Dann gingen Odongo und Apiyo nach draußen. Sie jagten Schmetterlingen und Vögeln nach.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/09.jpg" /></p>
+<p>পরদিন যখন দাদীমা বাগান থেকে সবজি তুলতে গেলেন, আমি চুপিচুপি উঁকি দিয়ে কলা দেখলাম। প্রায় সবগুলোই পাকা ছিল। আমি চারটি কলার একটি কাঁদি না নিয়ে পারলাম না। আমি যখন দরজার দিকে গুঁটি গুঁটি পায়ে এগিয়ে গেলাম, আমি বাহিরে দাদীমাকে কাশতে শুনলাম। আমি কলাগুলোকে জামার ভিতরে কোনমতে লুকিয়ে তাঁর পাশ দিয়ে হেঁটে গেলাম।</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/10.jpg" /></p>
-<p>Sie kletterten auf Bäume und planschten im See.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/10.jpg" /></p>
+<p>তার পরদিন ছিল হাটবার। দাদীমা ভোরে উঠলেন। তিনি সবসময় পাকা কলা এবং কাসাভা হাটে বিক্রি করতে নিতেন। আমি সেই দিন দাদীমার সাথে দেখা করতে তড়িঘড়ি করিনি। কিন্তু আমি বেশি সময় যাবত তাঁকে এড়াতে পারিনি।</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/11.jpg" /></p>
-<p>Als es dunkel war, gingen sie zum Abendessen ins Haus zurück. Noch bevor sie fertig waren, schliefen sie ein.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/11.jpg" /></p>
+<p>ওইদিন সন্ধ্যায় আমাকে আমার মা, বাবা আর দাদীমা ডেকে পাঠালেন। আমি জানতাম কেন। সেইদিন রাতে যখন আমি ঘুমাবার জন্য শুয়ে পড়লাম, আমি জানতাম আমি আর কখনও চুরি করতে পারব না, দাদীমার থেকে না, বাবামার থেকে না, এবং নিশ্চিতভাবে অন্য কারও থেকে না।</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,102 +186,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/12.jpg" /></p>
-<p>Am nächsten Tag fuhr der Vater zurück in die Stadt und ließ die Kinder Nyar-Kanyada.</p>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/13.jpg" /></p>
-<p>Odongo und Apiyo halfen ihrer Großmutter im Haushalt. Sie holten Wasser und Feuerholz. Sie sammelten Eier von den Hühnern und ernteten Gemüse aus dem Garten.</p>
-<center>
-<strong>12</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/14.jpg" /></p>
-<p>Nyar-Kanyada lehrte ihre Enkelkinder, wie man weichen Ugali als Beilage für den Eintopf zubereitet. Sie zeigte ihnen, wie man Kokosreis als zum Bratfisch macht.</p>
-<center>
-<strong>13</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/15.jpg" /></p>
-<p>Eines Morgens brachte Odongo Großmutters Kühe zum Grasen. Sie liefen hinüber zur Nachbarsfarm. Der Bauer war sehr böse auf Odongo. Er drohte, die Kühe als Entschädigung zu behalten. Von dort an passte der Junge genau auf, dass die Kühe keine Schwierigkeiten mehr machten.</p>
-<center>
-<strong>14</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/16.jpg" /></p>
-<p>An einem anderen Tag gingen die Kinder mit Nyar-Kanyada zum Markt. Sie hatte einen Stand, wo sie Gemüse, Zucker und Seife verkaufte. Apiyo hatte Spaß dabei, den Kunden die Preise für Dinge zu nennen. Odongo packte die Artikel ein, die die Kunden kauften.</p>
-<center>
-<strong>15</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/17.jpg" /></p>
-<p>Am Ende des Tages tranken sie einen Chai-Tee zusammen. Sie halfen Großmutter, das eingenommene Geld zu zählen.</p>
-<center>
-<strong>16</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/18.jpg" /></p>
-<p>Aber all zu schnell waren die Ferien zu Ende und die Kinder mussten in die Stadt zurückkehren. Nyar-Kanyada gab Odongo eine Kappe und Apiyo ein Sweatshirt. Sie packte Essen für die Reise.</p>
-<center>
-<strong>17</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/19.jpg" /></p>
-<p>Als ihr Vater kam, um sie abzuholen, wollten sie nicht gehen. Die Kinder flehten Nyar-Kanyada an, mit ihnen in die Stadt zukommen. Sie lächelte und sagte: „Ich bin zu alt für die Stadt. Ich werde darauf warten, dass ihr wieder zu mir ins Dorf kommt.“</p>
-<center>
-<strong>18</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/20.jpg" /></p>
-<p>Odongo und Apiyo umarmten sie fest zum Abschied.</p>
-<center>
-<strong>19</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/21.jpg" /></p>
-<p>Als Odongo und Apiyo wieder in die Schule gingen erzählten sie ihren Freunden vom Dorfleben. Manche Kinder fanden das Leben in der Stadt gut. Aber vor allem waren sich alle einig, dass Odongo und Apiyo eine wundervolle Großmutter hatten!</p>
-<center>
-<strong>20</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="ferien-mit-großmutter-1">Ferien mit Großmutter</h2>
-<strong>Text:</strong> Violet Otieno<br> <strong>Veranschaulichung:</strong> Catherine Groenewald<br> <strong>Übersetzung:</strong> Anna Westpfahl<br> <strong>Sprache:</strong> Deutsch<br>
+<h2 id="দদমর-কল-1">দাদীমার কলা</h2>
+<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Asma Afreen<br> <strong>Language:</strong> Bengali<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/holidays-grandmother'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/grandma%E2%80%99s-bananas'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
