--- a/stories/de/0002_sieh-dir-die-tiere-an.html
+++ b/stories/de/0002_sieh-dir-die-tiere-an.html
@@ -56,49 +56,49 @@ Jenny Katz<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/03.jpg" /></p>
 
-<p>Die Kuh macht “Muh”.</p>
+<p>Die Kuh macht „Muh“.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/04.jpg" /></p>
 
-<p>Die Ziege macht “Meck Meck”.</p>
+<p>Die Ziege macht „Meck Meck“.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/05.jpg" /></p>
 
-<p>Das Pferd wiehert.</p>
+<p>Das Pferd macht „Hühü hühü“.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/06.jpg" /></p>
 
-<p>Das Schwein macht “Oink Oink”.</p>
+<p>Das Schwein macht „Grunz grunz“.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/07.jpg" /></p>
 
-<p>Das Huhn gackert.</p>
+<p>Das Huhn macht „Gack gack“.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/08.jpg" /></p>
 
-<p>Der Hund macht “Wuff”.</p>
+<p>Der Hund macht „Wau wau“.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/09.jpg" /></p>
 
-<p>Der Bauer sagt “Psst!”.</p>
+<p>Der Bauer sagt „Psst!“</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
