--- a/stories/de/0002_sieh-dir-die-tiere-an_slides.html
+++ b/stories/de/0002_sieh-dir-die-tiere-an_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/03.jpg" /></p>
-<p>Die Kuh macht &quot;Muh&quot;.</p>
+<p>Die Kuh macht „Muh“.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/04.jpg" /></p>
-<p>Die Ziege macht &quot;Meck Meck&quot;.</p>
+<p>Die Ziege macht „Meck Meck“.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/05.jpg" /></p>
-<p>Das Pferd wiehert.</p>
+<p>Das Pferd macht „Hühü hühü“.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/06.jpg" /></p>
-<p>Das Schwein macht &quot;Oink Oink&quot;.</p>
+<p>Das Schwein macht „Grunz grunz“.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/07.jpg" /></p>
-<p>Das Huhn gackert.</p>
+<p>Das Huhn macht „Gack gack“.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/08.jpg" /></p>
-<p>Der Hund macht &quot;Wuff&quot;.</p>
+<p>Der Hund macht „Wau wau“.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/09.jpg" /></p>
-<p>Der Bauer sagt &quot;Psst!&quot;.</p>
+<p>Der Bauer sagt „Psst!“</p>
 <center>
 <strong>8</strong>
 </center>
