--- a/stories/de/0006_anansi-und-die-weisheit_slides.html
+++ b/stories/de/0006_anansi-und-die-weisheit_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
-<p>Gierig dachte Anansi: „Ich werde den Topf sicher im Gipfel eines Baumes aufbewahren. So habe ich ihn ganz für mich allein!“ Er spann einen langen Zwirn, wickelte ihn um den Tontopf und band ihn um seinen Bauch. Er begann, den Baum heraufzuklettern. Aber es war schwer den Baum so heraufzuklettern, da der Topf ständig gegen seine Knie stieß.</p>
+<p>Gierig dachte Anansi: „Ich werde den Topf sicher im Gipfel eines Baumes aufbewahren. So habe ich ihn ganz für mich allein!“ Er spann einen langen Zwirn, wickelte ihn um den Tontopf und band ihn um seinen Bauch. Er begann, den Baum hinaufzuklettern. Aber es war schwer den Baum so hinaufzuklettern, da der Topf ständig gegen seine Knie stieß.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/05.jpg" /></p>
-<p>Die ganze Zeit hatte Anansis junger Sohn unten am Baum gestanden und ihm zugeschaut: „Wäre es nicht leichter, wenn du dir den Topf stattdessen auf den Rücken bindest?“ Anansi versuchte es mit dem Topf auf dem Rücken und es war in der Tat viel leichter.</p>
+<p>Die ganze Zeit hatte Anansis junger Sohn unten am Baum gestanden und ihm zugeschaut: „Wäre es nicht leichter, wenn du dir den Topf stattdessen auf den Rücken bindest?“ Anansi versuchte es mit dem Topf auf dem Rücken und es ging in der Tat viel besser.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/06.jpg" /></p>
-<p>Im Nu erklomm Anansi die Baumspitze. Aber dann hielt er inne und dachte: „Ich soll derjenige mit der ganzen Weisheit sein und eben war mein Sohn schlauer als ich!“ Dies verärgerte Anansi so sehr, dass er den Tontopf vom Baum herunterwarf.</p>
+<p>Im Nu erklomm Anansi die Baumspitze. Aber dann hielt er inne und dachte: „Ich soll derjenige mit der ganzen Weisheit sein und eben war mein Sohn schlauer als ich!“ Dies verärgerte Anansi so sehr, dass er den Tontopf vom Baum hinunter warf.</p>
 <center>
 <strong>5</strong>
 </center>
