--- a/stories/de/0027_entscheidung.html
+++ b/stories/de/0027_entscheidung.html
@@ -84,14 +84,14 @@ Ursula Nafula<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/07.jpg" /></p>
 
-<p>Manche Jungen trieben sich im Dorf herum während andere auf Höfen arbeiteten.</p>
+<p>Manche Jungen trieben sich im Dorf herum, während andere auf Höfen arbeiteten.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/08.jpg" /></p>
 
-<p>Wenn der Wind blies, hing Toilettenpapier in den Bäumen und Zäunen.</p>
+<p>Wenn der Wind blies, hing Toilettenpapier in den Bäumen und an Zäunen.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -133,7 +133,7 @@ Ursula Nafula<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/14.jpg" /></p>
 
-<p>Der achtjährige Juma rief von einem Baumstamm aus: „Ich kann mit dem Aufräumen helfen!“</p>
+<p>Der achtjährige Juma rief von einem Baumstamm aus: „Ich kann beim Aufräumen helfen!“</p>
 
 <div class="pagenum">13</div>
 <p></div><div class="pagebreak"></p>
