--- a/stories/de/0027_entscheidung_slides.html
+++ b/stories/de/0027_entscheidung_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/07.jpg" /></p>
-<p>Manche Jungen trieben sich im Dorf herum während andere auf Höfen arbeiteten.</p>
+<p>Manche Jungen trieben sich im Dorf herum, während andere auf Höfen arbeiteten.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/08.jpg" /></p>
-<p>Wenn der Wind blies, hing Toilettenpapier in den Bäumen und Zäunen.</p>
+<p>Wenn der Wind blies, hing Toilettenpapier in den Bäumen und an Zäunen.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/14.jpg" /></p>
-<p>Der achtjährige Juma rief von einem Baumstamm aus: „Ich kann mit dem Aufräumen helfen!“</p>
+<p>Der achtjährige Juma rief von einem Baumstamm aus: „Ich kann beim Aufräumen helfen!“</p>
 <center>
 <strong>13</strong>
 </center>
