--- a/stories/de/0095_zama-ist-toll_slides.html
+++ b/stories/de/0095_zama-ist-toll_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/02.jpg" /></p>
-<p>Mein kleiner Bruder schläft lange. Ich wache früh auf weil ich groß bin.</p>
+<p>Mein kleiner Bruder schläft lange. Ich wache früh auf weil ich toll bin.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/03.jpg" /></p>
-<p>Ich bin derjenige, der die Sonne herein lässt.</p>
+<p>Ich bin diejenige, die die Sonne herein lässt.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/04.jpg" /></p>
-<p>&quot;Du bist mein Morgenstern&quot;, sagt Ma.</p>
+<p>“Du bist mein Morgenstern“, sagt Ma.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/07.jpg" /></p>
-<p>Ma erinnert mich: &quot;Vergiss Deine Zähne nicht.&quot; Ich antworte: &quot;Niemals, ich doch nicht!&quot;</p>
+<p>Ma erinnert mich: „Vergiss Deine Zähne nicht.“ Ich antworte: „Niemals, ich doch nicht!“</p>
 <center>
 <strong>6</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/09.jpg" /></p>
-<p>Dann kleide ich mich an. &quot;Ich bin nun groß, Ma.&quot;, sage ich.</p>
+<p>Dann ziehe ich mich an. „Ich bin nun groß, Ma.“, sage ich.</p>
 <center>
 <strong>8</strong>
 </center>
