--- a/stories/de/0110_ein-winziges-saatkorn-die-geschichte-von-wangari-maathai_slides.html
+++ b/stories/de/0110_ein-winziges-saatkorn-die-geschichte-von-wangari-maathai_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/02.jpg" /></p>
-<p>In einem Dorf in den Hängen des Mount Kenya in Ostafrika arbeitete ein kleines Mädchen mit ihrer Mutter auf den Feldern. Ihr Name war Wangari.</p>
+<p>In einem Dorf in den Hängen des Mount Kenia in Ostafrika arbeitete ein kleines Mädchen mit ihrer Mutter auf den Feldern. Ihr Name war Wangari.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/05.jpg" /></p>
-<p>Wangari war ein kluges Kind und konnte es nicht erwarten, in die Schule zu gehen. Aber ihre Mutter und Vater wollten, dass sie zu Hause blieb und ihnen im haus half. Als sie sieben Jahre alt was, überredete ihr großer Bruder ihre Eltern, sie zur Schule gehen zu lassen.</p>
+<p>Wangari war ein kluges Kind und sie konnte es nicht erwarten, in die Schule zu gehen. Aber ihre Mutter und Vater wollten, dass sie zu Hause blieb und ihnen im Haus half. Als sie sieben Jahre alt war, überredete ihr großer Bruder ihre Eltern, sie zur Schule gehen zu lassen.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/07.jpg" /></p>
-<p>An der amerikanischen Universität lernte Wangari viele neue Dinge. Sie studierte Pflanzen und wie sie wuchsen. Und sie erinnerte sich, wie sie wuchs: Spiele spielend mit ihren Brüdern im Schatten der Bäume in schönen kenianischen Wäldern.</p>
+<p>An der amerikanischen Universität lernte Wangari viele neue Dinge. Sie studierte Pflanzen und wie diese wuchsen. Und sie erinnerte sich, wie sie selbst wuchs: Spiele spielend mit ihren Brüdern im Schatten der Bäume in schönen kenianischen Wäldern.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/09.jpg" /></p>
-<p>Als sie ihr Studium beendete, kehrte sie nach Kenia zurück. Aber ihr Land hatte sich verändert. Riesige Farmen erstreckten sich über das Land. Frauen hatten kein Feuerholz mehr zum kochen. Die Menschen waren arm und die Kinder hungrig.</p>
+<p>Als sie ihr Studium beendet hatte, kehrte sie nach Kenia zurück. Aber ihr Land hatte sich verändert. Riesige Farmen erstreckten sich über das Land. Frauen hatten kein Feuerholz mehr zum Kochen. Die Menschen waren arm und die Kinder hungrig.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/10.jpg" /></p>
-<p>Wangari wusste, was zu tun war. Sie brachte den Frauen bei wie man Bäume von Saatkörnern pflanzt. Die Frauen verkauften die Bäumen und nahmen das Geld daraus, um ihre Familien zu versorgen. Die Frauen waren sehr glücklich. Wangari hatte ihnen dabei geholfen, sich kräftig und stark zu fühlen.</p>
+<p>Wangari wusste, was zu tun war. Sie brachte den Frauen bei, wie man Bäume mit Saatkörnern pflanzt. Die Frauen verkauften die Bäumen und nahmen das Geld davon, um ihre Familien zu versorgen. Die Frauen waren sehr glücklich. Wangari hatte ihnen dabei geholfen, sich kräftig und stark zu fühlen.</p>
 <center>
 <strong>9</strong>
 </center>
