--- a/stories/de/0129_mein-fauler-kleiner-bruder.html
+++ b/stories/de/0129_mein-fauler-kleiner-bruder.html
@@ -84,14 +84,14 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Deutsch</div><div class="pag
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/07.jpg" /></p>
 
-<p>Ich wasche das Geschirr.</p>
+<p>Ich spüle das Geschirr.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/08.jpg" /></p>
 
-<p>Warum arbeite ich so viel… während mein Bruder emsig spielt?</p>
+<p>Warum arbeite ich so viel … während mein Bruder munter spielt?</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
