--- a/stories/de/0141_das-huhn-und-millipede.html
+++ b/stories/de/0141_das-huhn-und-millipede.html
@@ -91,21 +91,21 @@ Winny Asara<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/08.jpg" /></p>
 
-<p>Als das Huhn nach Hause ging traf sie Millipedes Mutter. Millipedes Mutter fragte: “Hast Du mein Kind gesehen?”. Das Huhn antwortete nicht. Millipedes Mutter war besorgt.</p>
+<p>Als das Huhn nach Hause ging traf sie Millipedes Mutter. Millipedes Mutter fragte: „Hast Du mein Kind gesehen?“ Das Huhn antwortete nicht. Millipedes Mutter war besorgt.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/09.jpg" /></p>
 
-<p>Dann hörte Millipedes Mutter eine leise Stimme. “Hilf mir, Mama!” Millipedes Mutter schaute sich um und lauschte aufmerksam. Die Stimme kam vom Inneren des Huhns.</p>
+<p>Dann hörte Millipedes Mutter eine leise Stimme. „Hilf mir, Mama!“ Millipedes Mutter schaute sich um und lauschte aufmerksam. Die Stimme kam vom Inneren des Huhns.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/10.jpg" /></p>
 
-<p>Millipedes Mutter rief: “Nutze Deine spezielle Kraft, mein Kind!”. Millipede kann einen schlechten Geruch und Geschmack verbreiten. Dem Huhn wurde schlecht.</p>
+<p>Millipedes Mutter rief: „Nutze Deine spezielle Kraft, mein Kind!“ Millipede kann einen schlechten Geruch und Geschmack verbreiten. Dem Huhn wurde schlecht.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
