--- a/stories/de/0141_das-huhn-und-millipede_slides.html
+++ b/stories/de/0141_das-huhn-und-millipede_slides.html
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/08.jpg" /></p>
-<p>Als das Huhn nach Hause ging traf sie Millipedes Mutter. Millipedes Mutter fragte: &quot;Hast Du mein Kind gesehen?&quot;. Das Huhn antwortete nicht. Millipedes Mutter war besorgt.</p>
+<p>Als das Huhn nach Hause ging traf sie Millipedes Mutter. Millipedes Mutter fragte: „Hast Du mein Kind gesehen?“ Das Huhn antwortete nicht. Millipedes Mutter war besorgt.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/09.jpg" /></p>
-<p>Dann hörte Millipedes Mutter eine leise Stimme. &quot;Hilf mir, Mama!&quot; Millipedes Mutter schaute sich um und lauschte aufmerksam. Die Stimme kam vom Inneren des Huhns.</p>
+<p>Dann hörte Millipedes Mutter eine leise Stimme. „Hilf mir, Mama!“ Millipedes Mutter schaute sich um und lauschte aufmerksam. Die Stimme kam vom Inneren des Huhns.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/10.jpg" /></p>
-<p>Millipedes Mutter rief: &quot;Nutze Deine spezielle Kraft, mein Kind!&quot;. Millipede kann einen schlechten Geruch und Geschmack verbreiten. Dem Huhn wurde schlecht.</p>
+<p>Millipedes Mutter rief: „Nutze Deine spezielle Kraft, mein Kind!“ Millipede kann einen schlechten Geruch und Geschmack verbreiten. Dem Huhn wurde schlecht.</p>
 <center>
 <strong>9</strong>
 </center>
