--- a/stories/de/0158_henne-und-adler_slides.html
+++ b/stories/de/0158_henne-und-adler_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/02.jpg" /></p>
-<p>Es war einmal Henne und Adler, die Freunde waren. Sie lebten friedlich mit all den anderen Vögeln. Keiner von ihnen konnte fliegen.</p>
+<p>Es war einmal eine Henne und ein Adler, die Freunde waren. Sie lebten friedlich mit all den anderen Vögeln. Keiner von ihnen konnte fliegen.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/03.jpg" /></p>
-<p>Eines Tages überkam eine Hungersnot das Land. Adler musste sehr weit laufen, um Essen zu finden. Sie kam sehr müde zurück. &quot;Es muss eine leichtere Art der Fortbewegung geben!&quot;, sagte Adler.</p>
+<p>Eines Tages überkam eine Hungersnot das Land. Adler musste sehr weit laufen, um Essen zu finden. Sie kam sehr müde zurück. „Es muss eine leichtere Art der Fortbewegung geben!“, rief Adler.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
-<p>Nach einer erholsamen Nacht hatte Henne eine großartige Idee. Sie machte sich daran, alle ausgefallenen Federn ihrer Vogelfreunde einzusammeln. &quot;Lasst uns sie über unsere eigenen Federn nähen.&quot;, sagte sie. &quot;Vielleicht wird so die Fortbewegung leichter.&quot;</p>
+<p>Nach einer erholsamen Nacht hatte Henne eine großartige Idee. Sie machte sich daran, alle ausgefallenen Federn ihrer Vogelfreunde einzusammeln. „Lasst uns sie über unsere eigenen Federn nähen“, meinte sie. „Vielleicht wird so die Fortbewegung leichter.“</p>
 <center>
 <strong>3</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/06.jpg" /></p>
-<p>Aber die anderen Vögel hatten Adler davonfliegen sehen. Sie baten Henne, ihnen die Nadel zu leihen, um sich selbst auch Flügel zu nähen. Schon bald flogen Vögel am ganzen Himmel.</p>
+<p>Aber die anderen Vögel hatten Adler davonfliegen sehen. Sie baten Henne, ihnen die Nadel zu leihen, um sich selbst auch Flügel zu nähen. Schon bald flogen am ganzen Himmel Vögel.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/07.jpg" /></p>
-<p>Als der letzte Vogel die geliehene Nadel zurückbrachte, war Henne nicht da. Also nahmen ihre Kinder die Nadel und spielten mit ihr. Als sie keine Lust mehr hatten zu spielen, ließen sie die Nadel im Sand liegen.</p>
+<p>Als der letzte Vogel die geliehene Nadel zurückbrachte, war Henne nicht da. Also nahmen ihre Kinder die Nadel und spielten damit. Als sie keine Lust mehr am Spielen hatten, ließen sie die Nadel im Sand liegen.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/09.jpg" /></p>
-<p>&quot;Gib mir bloß einen Tag&quot;, bat Henne Adler. &quot;Dann kannst du deinen Flügel reparieren und davonfliegen, um Essen zu holen.&quot; &quot;Nur ein Tag&quot;, sagte Adler, &quot;Wenn du die Nadel bis dann nicht findest, musst du mir eins deiner Küken als Erstattung geben.&quot;</p>
+<p>“Gib mir bloß einen Tag“, bat Henne Adler. „Dann kannst du deinen Flügel reparieren und davonfliegen, um Essen zu holen.“ „Nur ein Tag“, sagte Adler, „Wenn du die Nadel bis dann nicht findest, musst du mir eins deiner Küken zur Wiedergutmachung geben.“</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/10.jpg" /></p>
-<p>Als Adler am nächsten Tag vorbeikam, fand sie Henne im Sand scharrend, aber ohne Nadel. Daher ging Adler in den Sturzflug und schnappte sich eins der Küken. Sie trug es davon. Seitdem immer wenn Adler auftaucht, sieht die Henne im Sand auf der Suche nach der Nadel scharren.</p>
+<p>Als Adler am nächsten Tag vorbeikam, fand sie Henne im Sand scharren, aber ohne Nadel. Daher ging Adler in den Sturzflug und schnappte sich eins der Küken. Sie trug es davon. Seitdem, immer wenn Adler auftaucht, sieht sie Henne im Sand auf der Suche nach der Nadel scharren.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
-<p>Wenn Adlers Flügel Schatten auf den Boden werfen, warnt Henne ihre Küken: &quot;Meidet das freie und trockene Land.&quot; Und sie antworten: &quot;Wir sind keine Narren. Wir werden laufen.&quot;</p>
+<p>Wenn Adlers Flügel Schatten auf den Boden werfen, warnt Henne ihre Küken: „Meidet das freie und trockene Land.“ Und sie antworten: „Wir sind keine Narren. Wir werden laufen.“</p>
 <center>
 <strong>10</strong>
 </center>
