--- a/stories/de/0296_tom-der-bananenverkäufer.html
+++ b/stories/de/0296_tom-der-bananenverkäufer.html
@@ -77,14 +77,14 @@ Humphreys Odunga<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/06.jpg" /></p>
 
-<p>“In unserer Gemeinschaft verkaufen nur Frauen Obst.”, sagen die Leute. “Was ist denn das für ein Mann?”, fragen die Leute.</p>
+<p>“In unserer Gemeinschaft verkaufen nur Frauen Obst“, sagen die Leute. „Was ist denn das für ein Mann?“, fragen die Leute.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/07.jpg" /></p>
 
-<p>Aber Tom gibt nicht auf. Er ruft: “Kauft meine Bananen! Kauft meine süßen, reifen Bananen!”</p>
+<p>Aber Tom gibt nicht auf. Er ruft: „Kauft meine Bananen! Kauft meine süßen, reifen Bananen!“</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -112,7 +112,7 @@ Humphreys Odunga<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/11.jpg" /></p>
 
-<p>Bald ist der Korb leer. Tom zählt das Geld, was er verdient hat.</p>
+<p>Bald ist der Korb leer. Tom zählt das Geld, das er verdient hat.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
