--- a/stories/de/0315_sakimas-lied_slides.html
+++ b/stories/de/0315_sakimas-lied_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/02.jpg" /></p>
-<p>Sakima lebte zusammen mit seinen Eltern und seiner vier Jahre alten Schwester. Sie lebten auf dem Land eines reichen Mannes. Ihre grasgedeckte Hütte stand am einer einer Baumreihe.</p>
+<p>Sakima lebte zusammen mit seinen Eltern und seiner vier Jahre alten Schwester. Sie lebten auf dem Land eines reichen Mannes. Ihre grasgedeckte Hütte stand an einer Baumreihe.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/04.jpg" /></p>
-<p>Sakima machte viele Dinge, die andere sechsjährige Jungen nicht machten. Zum Beispiel konnte er mit den älteren Dorfbewohnern zusammensitzen und wichtige Themen besprechen.</p>
+<p>Sakima tat viele Dinge, die andere sechsjährige Jungen nicht taten. Zum Beispiel konnte er mit den älteren Dorfbewohnern zusammensitzen und wichtige Themen besprechen.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/05.jpg" /></p>
-<p>Sakimas Eltern arbeiteten im Haus des reichen Manns. Sie ging früh am Morgen zur Arbeit und kamen spät am Abend zurück. Sakima blieb bei seiner Schwester.</p>
+<p>Sakimas Eltern arbeiteten im Haus des reichen Manns. Sie gingen früh am Morgen zur Arbeit und kamen spät am Abend zurück. Sakima blieb bei seiner Schwester.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/06.jpg" /></p>
-<p>Sakima liebte es, Lieder zu singen. Eines Tages fragte seine Mutter ihn: &quot;Wo lernst du diese Lieber, Sakima?&quot;</p>
+<p>Sakima liebte es, Lieder zu singen. Eines Tages fragte seine Mutter ihn: „Wo lernst du diese Lieder, Sakima?“</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/07.jpg" /></p>
-<p>Sakima antwortete: &quot;Sie kommen mir einfach, Mutter. Ich höre sie in meinem Kopf und dann singe ich los.&quot;</p>
+<p>Sakima antwortete: „Sie kommen mir einfach, Mutter. Ich höre sie in meinem Kopf und dann singe ich los.“</p>
 <center>
 <strong>6</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/09.jpg" /></p>
-<p>&quot;Kannst du es wieder und wieder singen, Sakima?&quot;, bat ihn seine Schwester. Sakima stimmte zu und sang immer wieder.</p>
+<p>“Kannst du es wieder und wieder singen, Sakima?“, bat ihn seine Schwester. Sakima stimmte zu und sang immer wieder.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/11.jpg" /></p>
-<p>&quot;Was ist los, Mutter, Vater?&quot;, fragte Sakima. Sakima erfuhr, dass der Sohn des reichen Mannes vermisst wurde. Der Mann war sehr traurig und einsam.</p>
+<p>“Was ist los, Mutter, Vater?“, fragte Sakima. Sakima erfuhr, dass der Sohn des reichen Mannes vermisst wurde. Der Mann war sehr traurig und einsam.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/12.jpg" /></p>
-<p>&quot;Ich kann für ihn singen. Vielleicht stimmt ihn das wieder glücklich&quot;, erzählte Sakima seinen Eltern. Aber seine Eltern lehnten ab: &quot;Er ist sehr reich. Du bist nur ein blinder Junge. Glaubst du ein Lied hilft ihm?&quot;</p>
+<p>“Ich kann für ihn singen. Vielleicht stimmt ihn das wieder glücklich“, erzählte Sakima seinen Eltern. Aber seine Eltern lehnten ab: „Er ist sehr reich. Du bist nur ein blinder Junge. Glaubst du ein Lied hilft ihm?“</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/13.jpg" /></p>
-<p>Trotzdem gab Sakima nicht auf. Seine kleine Schwester unterstützte ihn. Sie meinte: &quot;Sakimas Lieder trösten mich, wenn ich Hunger habe. Sie werden auch den reichen Mann trösten.&quot;</p>
+<p>Trotzdem gab Sakima nicht auf. Seine kleine Schwester unterstützte ihn. Sie meinte: „Sakimas Lieder trösten mich, wenn ich Hunger habe. Sie werden auch den reichen Mann trösten.“</p>
 <center>
 <strong>12</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/16.jpg" /></p>
-<p>Die Arbeiter unterbrachen ihre Arbeit. Sie hörten Sakimas wunderschönem Lied zu. Aber ein Mann meinte: &quot;Niemand hat es geschafft, den Boss zu trösten. Glaubt dieser blinde Junge, dass er ihn trösten kann?&quot;</p>
+<p>Die Arbeiter unterbrachen ihre Arbeit. Sie hörten Sakimas wunderschönem Lied zu. Aber ein Mann meinte: „Niemand hat es geschafft, den Boss zu trösten. Glaubt dieser blinde Junge, dass er ihn trösten kann?“</p>
 <center>
 <strong>15</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/17.jpg" /></p>
-<p>Sakima sang das Lied zu End und wollte sich auf den Heimweg machen. Aber der reiche Mann eilte aus dem Haus und sagte: &quot;Bitte, sing noch einmal.&quot;</p>
+<p>Sakima sang das Lied zu Ende und wollte sich auf den Heimweg machen. Aber der reiche Mann eilte aus dem Haus und sagte: „Bitte, sing noch einmal.“</p>
 <center>
 <strong>16</strong>
 </center>
@@ -250,7 +250,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/19.jpg" /></p>
-<p>Der reiche Mann war so glücklich, seinen Sohn wiederzusehen. Er belohnte Sakima für seinen Trost. Er brachte seinen Sohn und Sakima ins Krankenhaus, so dass Sakima seine Sehkraft wiedererlangen konnte.</p>
+<p>Der reiche Mann war so glücklich, seinen Sohn wiederzusehen. Er belohnte Sakima für seinen Trost. Er brachte seinen Sohn und Sakima ins Krankenhaus, damit Sakima seine Sehkraft wieder bekam.</p>
 <center>
 <strong>18</strong>
 </center>
