--- a/stories/de/0324_als-ich-mein-zuhause-verließ-und-in-die-stadt-zog.html
+++ b/stories/de/0324_als-ich-mein-zuhause-verließ-und-in-die-stadt-zog.html
@@ -56,7 +56,7 @@ Lesley Koyi, Ursula Nafula<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/03.jpg" /></p>
 
-<p>“Stadt! Stadt! Richtung Westen!” hörte ich einen Händler rufen. Diesen Bus musste ich nehmen.</p>
+<p>“Stadt! Stadt! Richtung Westen!“ hörte ich einen Händler rufen. Diesen Bus musste ich nehmen.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -105,7 +105,7 @@ Lesley Koyi, Ursula Nafula<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/10.jpg" /></p>
 
-<p>Dieses Geschehen wurde durch das Hupen des Busses unterbrochen, ein Zeichen, dass wir bereit für die Abfahrt waren. Der Händler rief den Straßenverkäufern zu auszusteigen.</p>
+<p>Dieses Geschehen wurde vom Hupen des Busses unterbrochen, ein Zeichen, dass wir bereit für die Abfahrt waren. Der Händler rief den Straßenverkäufern zu auszusteigen.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
@@ -133,7 +133,7 @@ Lesley Koyi, Ursula Nafula<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/14.jpg" /></p>
 
-<p>Aber in Gedanken war ich noch zu Hause. Wird meine Mutter in Sicherheit sein? Werden meine Hasen Geld einbringen? Wird mein Bruder daran denken meine Baumsetzlinge zu gießen?</p>
+<p>Aber in Gedanken war ich noch zu Hause. Wird meine Mutter in Sicherheit sein? Werden meine Hasen Geld einbringen? Wird mein Bruder daran denken, meine Baumsetzlinge zu gießen?</p>
 
 <div class="pagenum">13</div>
 <p></div><div class="pagebreak"></p>
@@ -147,7 +147,7 @@ Lesley Koyi, Ursula Nafula<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/16.jpg" /></p>
 
-<p>Neun Stunden später wachte ich von lautem Gepolter und Passagierausrufen für mein Dorf auf. Ich nahm meine kleine Tasche und sprang aus dem Bus.</p>
+<p>Neun Stunden später wachte ich von lautem Gepolter und der Passagieransage für mein Dorf auf. Ich nahm meine kleine Tasche und sprang aus dem Bus.</p>
 
 <div class="pagenum">15</div>
 <p></div><div class="pagebreak"></p>
