--- a/stories/de/0337_kinder-aus-wachs_slides.html
+++ b/stories/de/0337_kinder-aus-wachs_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/03.jpg" /></p>
-<p>Sie stritten nie miteinander. Sie halfen ihren Eltern zu Haus und auf den Feldern.</p>
+<p>Sie stritten nie miteinander. Sie halfen ihren Eltern im Haus und auf den Feldern.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/07.jpg" /></p>
-<p>Eines Tages war die Sehnsucht zu groß. Seine Brüder warnten ihn...</p>
+<p>Eines Tages war die Sehnsucht zu groß. Seine Brüder warnten ihn …</p>
 <center>
 <strong>6</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/09.jpg" /></p>
-<p>Die Wachskinder waren sehr traurig zu sehen, wie ihr Bruder dahinschmolz.</p>
+<p>Die Wachskinder waren sehr traurig sehen zu müssen, wie ihr Bruder dahin schmolz.</p>
 <center>
 <strong>8</strong>
 </center>
