--- a/stories/de/0342_strafe_slides.html
+++ b/stories/de/0342_strafe_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/02.jpg" /></p>
-<p>Eines Tages holte Mama viel Obst.</p>
+<p>Eines Tages holt Mama viel Obst.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/03.jpg" /></p>
-<p>&quot;Wann können wir etwas Obst essen?&quot;, fragten wir. &quot;Wir essen das Obst heute Abend&quot;, sagt Mama.</p>
+<p>“Wann können wir etwas Obst essen?“, fragen wir. „Wir essen das Obst heute Abend“, sagt Mama.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
-<p>&quot;Guck was Rahim gemacht hat!&quot;, ruft mein kleiner Bruder. &quot;Rahim ist ungezogen und egoistisch&quot;, sage ich.</p>
+<p>“Guck was Rahim gemacht hat!“, ruft mein kleiner Bruder. „Rahim ist ungezogen und egoistisch“, sage ich.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/07.jpg" /></p>
-<p>Wir waren auch böse mit Rahim. Aber Rahim tut es nicht leid.</p>
+<p>Wir sind auch böse auf Rahim. Aber Rahim tut es nicht leid.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/08.jpg" /></p>
-<p>&quot;Kriegt Rahim keine Strafe?&quot;, fragt kleiner Bruder.</p>
+<p>“Kriegt Rahim keine Strafe?“, fragt kleiner Bruder.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/09.jpg" /></p>
-<p>&quot;Rahim, dir wird es bald leid tun&quot;, warnt Mama.</p>
+<p>“Rahim, dir wird es bald leid tun“, warnt Mama.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/11.jpg" /></p>
-<p>&quot;Mein Bauch tut so weh&quot;, flüstert Rahim.</p>
+<p>“Mein Bauch tut so weh“, flüstert Rahim.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/13.jpg" /></p>
-<p>Später entschuldigt sich Rahim bei uns. &quot;Ich werde nie wieder so gierig sein&quot;, verspricht er. Und wir alle glauben ihm.</p>
+<p>Später entschuldigt sich Rahim bei uns. „Ich werde nie wieder so gierig sein“, verspricht er. Und wir alle glauben ihm.</p>
 <center>
 <strong>12</strong>
 </center>
