--- a/stories/ur/0262_مگوزوے_slides.html
+++ b/stories/ur/0262_مگوزوے_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/10.jpg" /></p>
-<p>مگوزوے سڑک پر بیٹھا کتاب میں اپنی تصویر دیکھ رہا تھا۔ جب تھامس آکر اُس کے پاس بیٹھا۔ یہ کہانی کس بارے میں ہے؟ تھامس نے پوچھا۔ یہ ایسے لڑکے کے بارے میں ہے جو کہ کپتان بنا مگوزوے نے جو اب دیا۔ اُس لڑکے کا کیا نام ہے؟ تھامس نے اُس سے پوچھا۔ میں نہیں جانتا، میں پڑھ نہیں سکتا مگوزوے نے چپکے سے جواب دیا۔</p>
+<p>مگوزوے سڑک پر بیٹھا کتاب میں اپنی تصویر دیکھ رہا تھا۔ جب تھامس آکر اُس کے پاس بیٹھا۔ یہ کہانی کس بارے میں ہے؟ تھامس نے پوچھا۔ یہ ایسے لڑکے کے بارے میں ہے جو کہ کپتان بنا مگوزوے نے جواب دیا۔ اُس لڑکے کا کیا نام ہے؟ تھامس نے اُس سے پوچھا۔ میں نہیں جانتا، میں پڑھ نہیں سکتا مگوزوے نے چپکے سے جواب دیا۔</p>
 <center>
 <strong>9</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/12.jpg" /></p>
-<p>مگوزوے کی دسویں سالگرہ پر تھامس نے اُس کو ایک نئی کہانی کی کتاب تحفے میں دی۔ یہ کہانی ایک گاؤں کے لڑکے کے بارے میں تھی۔ جو کہ بڑا ہو کر ایک مشہور فٹبالر بنناچاہتا تھا۔ تھامس نے مگوزوے کو وہ کہانی کئی بار پڑھ کر سُنائی۔ حتیٰ کہ ایک دن اُس نے کہا میرے خیال سے تمہیں سکول جانا چاہیے اور پڑھنا لکھنا سیکھنا چاہیے۔ تمہارا کیا خیال ہے؟ تھامس نے اُسے تفصیل سے بتایا کہ وہ ایک جگہ کے بارے میں جانتا ہے جہاں بچے رہ سکتے ہیں اور سکول جا سکتے ہیں۔</p>
+<p>مگوزوے کی دسویں سالگرہ پر تھامس نے اُس کو ایک نئی کہانی کی کتاب تحفے میں دی۔ یہ کہانی ایک گاؤں کے لڑکے کے بارے میں تھی۔ جو کہ بڑا ہو کر ایک مشہور فٹبالر بننا چاہتا تھا۔ تھامس نے مگوزوے کو وہ کہانی کئی بار پڑھ کر سُنائی۔ حتیٰ کہ ایک دن اُس نے کہا میرے خیال سے تمہیں سکول جانا چاہیے اور پڑھنا لکھنا سیکھنا چاہیے۔ تمہارا کیا خیال ہے؟ تھامس نے اُسے تفصیل سے بتایا کہ وہ ایک جگہ کے بارے میں جانتا ہے جہاں بچے رہ سکتے ہیں اور سکول جا سکتے ہیں۔</p>
 <center>
 <strong>11</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/17.jpg" /></p>
-<p>مگوزوے سبز چھت والے گھر کے باغیچے میں بیٹھا ایک کہانی کی کتاب پڑھ رہا تھا جو کہ اُسے سکول کی طرف سے ملی تھی۔ تھامس اُس کے پاس آکر بیٹھا۔ کہانی کس بارے میں ہے؟ تھامس نے پوچھا؟ یہ ایک ایسے لڑکے کے بارے میں ہے جو اُستاد بننا چاہتا تھا۔ مگوزوے نے جو اب دیا۔ اُس لڑکے کا نام کیا ہے؟ تھامس نے پوچھا؟ اُس کا نام مگوزوے ہے۔ اُس نے مسکراتے ہوئے کہا۔</p>
+<p>مگوزوے سبز چھت والے گھر کے باغیچے میں بیٹھا ایک کہانی کی کتاب پڑھ رہا تھا جو کہ اُسے سکول کی طرف سے ملی تھی۔ تھامس اُس کے پاس آکر بیٹھا۔ کہانی کس بارے میں ہے؟ تھامس نے پوچھا؟ یہ ایک ایسے لڑکے کے بارے میں ہے جو اُستاد بننا چاہتا تھا۔ مگوزوے نے جواب دیا۔ اُس لڑکے کا نام کیا ہے؟ تھامس نے پوچھا؟ اُس کا نام مگوزوے ہے، اُس نے مسکراتے ہوئے کہا۔</p>
 <center>
 <strong>16</strong>
 </center>
