--- a/stories/bn/0234_ফুটবল-তারকা-আন্দিসওয়া.html
+++ b/stories/bn/0234_ফুটবল-তারকা-আন্দিসওয়া.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Andiswa Fußballstar</title>
+    <title>ফুটবল তারকা আন্দিসওয়া</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,67 +43,67 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/01.jpg" />
 
-<h1 id="andiswa-fuballstar">Andiswa Fußballstar</h1>
+<h1 id="section">ফুটবল তারকা আন্দিসওয়া</h1>
 
-Eden Daniels<br>Deutsch</div><div class="pagebreak">
+Eden Daniels<br>বাংলা</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/02.jpg" /></p>
 
-<p>Andiswa schaute den Jungen beim Fußballspielen zu. Sie wünschte, sie könnte auch in der Mannschaft sein. Sie fragt den Trainer, ob sie mit ihnen trainieren kann.</p>
+<p>আন্দিসওয়া ছেলেদের ফুটবল খেলতে দেখছিলেন। তাঁর ইচ্ছা হল যে তিনি ওদের সাথে খেলবেন। তিনি প্রশিক্ষককে জিজ্ঞেস করলেন যে তিনি কি ওদের সাথে অনুশীলন করতে পারবেন কিনা।</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/03.jpg" /></p>
 
-<p>Der Trainer stemmte die Hände in die Hüften. „An dieser Schule dürfen nur Jungen Fußball spielen.“, sagt er.</p>
+<p>প্রশিক্ষক নিজের হাত কোমরে রাখলেন। “এই স্কুলে শুধুমাত্র ছেলেদের ফুটবল খেলার অনুমতি আছে,” তিনি বললেন।</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/04.jpg" /></p>
 
-<p>Die Jungen sagten, sie solle Netzball spielen. Sie sagten, Netzball sei für Mädchen und Fußball für Jungs.</p>
+<p>ছেলেরা তাঁকে নেটবল খেলার জন্য বলল। তারা বলল যে নেটবল মেয়েদের জন্য এবং ফুটবল ছেলেদের জন্য। আন্দিসওয়া দুঃখ পেল।</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/05.jpg" /></p>
 
-<p>Am nächsten Tag gab es ein großes Fußballspiel. Der Trainer machte sich Sorgen, weil sein bester Spieler krank war und nicht spielen konnte.</p>
+<p>পরদিন স্কুলে একটি বড় ফুটবল খেলার প্রতিযোগিতা ছিল। প্রশিক্ষক চিন্তিত ছিলেন কারণ তার সবচেয়ে সেরা খেলোয়ার অসুস্থ ছিল এবং খেলতে পারত না।</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/06.jpg" /></p>
 
-<p>Andiswa lief zum Trainer und flehte ihn an, sie spielen zu lassen. Der Trainer wusste nicht, was er tun sollte. Dann beschloss er, Andiswa in die Mannschaft auszunehmen.</p>
+<p>আন্দিসওয়া প্রশিক্ষকের কাছে দৌড়ে গিয়ে তাঁকে অনুরোধ করলেন যেন তাঁকে খেলতে দেয়া হয়। প্রশিক্ষক বুঝে উঠতে পারছিলেন না কি করা উচিত।  এরপর তিনি সিদ্ধান্ত নেন যে আন্দিসওয়া দলের সাথে যোগ দিতে পারবে।</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/07.jpg" /></p>
 
-<p>Das Spiel war hart. Zur Halbzeit hatte noch niemand ein Tor geschossen.</p>
+<p>খেলা কঠিন ছিল। মধ্যহ্ন বিরতি পর্যন্ত কেউই গোল করেননি।</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/08.jpg" /></p>
 
-<p>Während der zweiten Halbzeit spielte einer der Jungen Andiswa den Ball zu. Sie bewegte sich sehr schnell auf das Tor zu. Sie schoss den Ball mit großer Wucht und erzielte ein Tor.</p>
+<p>প্রতিযোগিতার দ্বিতীয়ার্ধের সময়, ছেলেদের মধ্যে একজন আন্দিসওয়াকে বল পাস করল। তিনি গোলপোস্টের দিকে দ্রুত চলে গেলেন। তিনি বলে শক্ত লাথি মেরে একটি গোল করলেন।</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/09.jpg" /></p>
 
-<p>Die Zuschauer jubelten begeistert. Seit diesem Tag dürfen Mädchen an der Schule auch Fußball spielen.</p>
+<p>জনতা আনন্দের জোয়ারে ভেসে গেল। সেই দিন থেকে মেয়েরাও স্কুলে ফুটবল খেলার অনুমতি পেল।</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Eden Daniels<br /><strong>Veranschaulichung:</strong> Eden Daniels<br /><strong>Übersetzung:</strong> Anna Westpfahl<br /><strong>Sprache:</strong> Deutsch</p>
+<p><strong>Text:</strong> Eden Daniels<br /><strong>Illustrations:</strong> Eden Daniels<br /><strong>Translation:</strong> Asma Afreen<br /><strong>Language:</strong> Bengali</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/andiswa-soccer-star">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
