--- a/stories/bn/0234_ফুটবল-তারকা-আন্দিসওয়া_slides.html
+++ b/stories/bn/0234_ফুটবল-তারকা-আন্দিসওয়া_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Ferien mit Großmutter - Global African Storybook</title>
+  <title>ফুটবল তারকা আন্দিসওয়া - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="ferien-mit-großmutter" class="slide level1">
-<h1>Ferien mit Großmutter</h1>
+<section id="ফটবল-তরক-আনদসওয" class="slide level1">
+<h1>ফুটবল তারকা আন্দিসওয়া</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/02.jpg" /></p>
-<p>Odongo und Apiyo lebten mit ihrem Vater in der Stadt. Sie freuten sich auf die Ferien. Nicht nur weil sie dann nicht in die Schule mussten, sondern auch weil sie dann ihre Großmutter besuchen würden. Sie lebte in einem Fischerdorf in der Nähe eines großen Sees.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/02.jpg" /></p>
+<p>আন্দিসওয়া ছেলেদের ফুটবল খেলতে দেখছিলেন। তাঁর ইচ্ছা হল যে তিনি ওদের সাথে খেলবেন। তিনি প্রশিক্ষককে জিজ্ঞেস করলেন যে তিনি কি ওদের সাথে অনুশীলন করতে পারবেন কিনা।</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/03.jpg" /></p>
-<p>Odongo und Apiyo freuten sich, dass es Zeit war ihre Großmutter zu besuchen. Am Abend davor packten sie ihre Taschen und bereiteten sich für die lange Reise zu ihrem Dorf vor. Sie konnten nicht schlafen und redeten die ganze Nacht über den Urlaub.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/03.jpg" /></p>
+<p>প্রশিক্ষক নিজের হাত কোমরে রাখলেন। &quot;এই স্কুলে শুধুমাত্র ছেলেদের ফুটবল খেলার অনুমতি আছে,&quot; তিনি বললেন।</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/04.jpg" /></p>
-<p>Früh am nächsten Morgen machten sie sich im Auto ihres Vaters zum Dorf auf. Sie fuhren an Bergen, wilden Tieren und Teeplantagen vorbei. Sie zählten Autos und sangen Lieder.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/04.jpg" /></p>
+<p>ছেলেরা তাঁকে নেটবল খেলার জন্য বলল। তারা বলল যে নেটবল মেয়েদের জন্য এবং ফুটবল ছেলেদের জন্য। আন্দিসওয়া দুঃখ পেল।</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/05.jpg" /></p>
-<p>Nach einer Weile waren die Kinder müde und schliefen ein.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/05.jpg" /></p>
+<p>পরদিন স্কুলে একটি বড় ফুটবল খেলার প্রতিযোগিতা ছিল। প্রশিক্ষক চিন্তিত ছিলেন কারণ তার সবচেয়ে সেরা খেলোয়ার অসুস্থ ছিল এবং খেলতে পারত না।</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/06.jpg" /></p>
-<p>Vater weckte Odongo und Apiyo, als sie im Dorf ankamen. Nyar-Kanyada, ihre Großmutter, lag auf einer Matte unter einem Baum und entspannte. Nyar-Kanyada in Luo bedeutet „Tochter des Volkes von Kanyada“. Sie war eine schöne und starke Frau.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/06.jpg" /></p>
+<p>আন্দিসওয়া প্রশিক্ষকের কাছে দৌড়ে গিয়ে তাঁকে অনুরোধ করলেন যেন তাঁকে খেলতে দেয়া হয়। প্রশিক্ষক বুঝে উঠতে পারছিলেন না কি করা উচিত। এরপর তিনি সিদ্ধান্ত নেন যে আন্দিসওয়া দলের সাথে যোগ দিতে পারবে।</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/07.jpg" /></p>
-<p>Nyar-Kanyada bat sie ins Haus und tanzte freudig im Zimmer herum. Ihre Enkelkinder überreichten ihr begeistert ihre Geschenke. „Öffne mein Geschenk zuerst“, meinte Odongo. „Nein, meins zuerst!“, entgegnete Apiyo.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/07.jpg" /></p>
+<p>খেলা কঠিন ছিল। মধ্যহ্ন বিরতি পর্যন্ত কেউই গোল করেননি।</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/08.jpg" /></p>
-<p>Nachdem sie die Geschenke geöffnet hatte, segnete Nyar-Kanyada ihre Enkelkinder auf traditionelle Art.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/08.jpg" /></p>
+<p>প্রতিযোগিতার দ্বিতীয়ার্ধের সময়, ছেলেদের মধ্যে একজন আন্দিসওয়াকে বল পাস করল। তিনি গোলপোস্টের দিকে দ্রুত চলে গেলেন। তিনি বলে শক্ত লাথি মেরে একটি গোল করলেন।</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/09.jpg" /></p>
-<p>Dann gingen Odongo und Apiyo nach draußen. Sie jagten Schmetterlingen und Vögeln nach.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/09.jpg" /></p>
+<p>জনতা আনন্দের জোয়ারে ভেসে গেল। সেই দিন থেকে মেয়েরাও স্কুলে ফুটবল খেলার অনুমতি পেল।</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,126 +168,18 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/10.jpg" /></p>
-<p>Sie kletterten auf Bäume und planschten im See.</p>
-<center>
-<strong>9</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/11.jpg" /></p>
-<p>Als es dunkel war, gingen sie zum Abendessen ins Haus zurück. Noch bevor sie fertig waren, schliefen sie ein.</p>
-<center>
-<strong>10</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/12.jpg" /></p>
-<p>Am nächsten Tag fuhr der Vater zurück in die Stadt und ließ die Kinder Nyar-Kanyada.</p>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/13.jpg" /></p>
-<p>Odongo und Apiyo halfen ihrer Großmutter im Haushalt. Sie holten Wasser und Feuerholz. Sie sammelten Eier von den Hühnern und ernteten Gemüse aus dem Garten.</p>
-<center>
-<strong>12</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/14.jpg" /></p>
-<p>Nyar-Kanyada lehrte ihre Enkelkinder, wie man weichen Ugali als Beilage für den Eintopf zubereitet. Sie zeigte ihnen, wie man Kokosreis als zum Bratfisch macht.</p>
-<center>
-<strong>13</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/15.jpg" /></p>
-<p>Eines Morgens brachte Odongo Großmutters Kühe zum Grasen. Sie liefen hinüber zur Nachbarsfarm. Der Bauer war sehr böse auf Odongo. Er drohte, die Kühe als Entschädigung zu behalten. Von dort an passte der Junge genau auf, dass die Kühe keine Schwierigkeiten mehr machten.</p>
-<center>
-<strong>14</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/16.jpg" /></p>
-<p>An einem anderen Tag gingen die Kinder mit Nyar-Kanyada zum Markt. Sie hatte einen Stand, wo sie Gemüse, Zucker und Seife verkaufte. Apiyo hatte Spaß dabei, den Kunden die Preise für Dinge zu nennen. Odongo packte die Artikel ein, die die Kunden kauften.</p>
-<center>
-<strong>15</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/17.jpg" /></p>
-<p>Am Ende des Tages tranken sie einen Chai-Tee zusammen. Sie halfen Großmutter, das eingenommene Geld zu zählen.</p>
-<center>
-<strong>16</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/18.jpg" /></p>
-<p>Aber all zu schnell waren die Ferien zu Ende und die Kinder mussten in die Stadt zurückkehren. Nyar-Kanyada gab Odongo eine Kappe und Apiyo ein Sweatshirt. Sie packte Essen für die Reise.</p>
-<center>
-<strong>17</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/19.jpg" /></p>
-<p>Als ihr Vater kam, um sie abzuholen, wollten sie nicht gehen. Die Kinder flehten Nyar-Kanyada an, mit ihnen in die Stadt zukommen. Sie lächelte und sagte: „Ich bin zu alt für die Stadt. Ich werde darauf warten, dass ihr wieder zu mir ins Dorf kommt.“</p>
-<center>
-<strong>18</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/20.jpg" /></p>
-<p>Odongo und Apiyo umarmten sie fest zum Abschied.</p>
-<center>
-<strong>19</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/21.jpg" /></p>
-<p>Als Odongo und Apiyo wieder in die Schule gingen erzählten sie ihren Freunden vom Dorfleben. Manche Kinder fanden das Leben in der Stadt gut. Aber vor allem waren sich alle einig, dass Odongo und Apiyo eine wundervolle Großmutter hatten!</p>
-<center>
-<strong>20</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="ferien-mit-großmutter-1">Ferien mit Großmutter</h2>
-<strong>Text:</strong> Violet Otieno<br> <strong>Veranschaulichung:</strong> Catherine Groenewald<br> <strong>Übersetzung:</strong> Anna Westpfahl<br> <strong>Sprache:</strong> Deutsch<br>
+<h2 id="ফটবল-তরক-আনদসওয-1">ফুটবল তারকা আন্দিসওয়া</h2>
+<strong>Text:</strong> Eden Daniels<br> <strong>Illustrations:</strong> Eden Daniels<br> <strong>Translation:</strong> Asma Afreen<br> <strong>Language:</strong> Bengali<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/holidays-grandmother'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/andiswa-soccer-star'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
 </div></center>
 
 
