--- a/stories/de/0003_schulkleidung.html
+++ b/stories/de/0003_schulkleidung.html
@@ -49,7 +49,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Deutsch</div><div class="pag
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/02.jpg" /></p>
 
-<p>Dieses Kleid ist lang</p>
+<p>Dieses Kleid ist lang.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -70,7 +70,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Deutsch</div><div class="pag
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/05.jpg" /></p>
 
-<p>Dieser Gürtel ist…</p>
+<p>Dieser Gürtel ist …</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -98,7 +98,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Deutsch</div><div class="pag
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/09.jpg" /></p>
 
-<p>…sie passen gut.</p>
+<p>… sie passen gut.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
