--- a/stories/de/0003_schulkleidung_slides.html
+++ b/stories/de/0003_schulkleidung_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/02.jpg" /></p>
-<p>Dieses Kleid ist lang</p>
+<p>Dieses Kleid ist lang.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/05.jpg" /></p>
-<p>Dieser Gürtel ist...</p>
+<p>Dieser Gürtel ist …</p>
 <center>
 <strong>4</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/09.jpg" /></p>
-<p>...sie passen gut.</p>
+<p>… sie passen gut.</p>
 <center>
 <strong>8</strong>
 </center>
