--- a/stories/de/0066_nozibele-und-die-drei-haare.html
+++ b/stories/de/0066_nozibele-und-die-drei-haare.html
@@ -70,7 +70,7 @@ Tessa Welch<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/05.jpg" /></p>
 
-<p>Als sie fast zu Hause waren, fasste sich Nozibele an den Hals. Sie hatte ihre Kette vergessen! “Bitte geht mit mir zurück!”, flehte sie ihre Freundinnen. Aber ihre Freundinnen sagten, es sei zu spät.</p>
+<p>Als sie fast zu Hause waren, fasste sich Nozibele an den Hals. Sie hatte ihre Kette vergessen! „Bitte geht mit mir zurück!“, flehte sie ihre Freundinnen an. Aber ihre Freundinnen sagten, es sei zu spät.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -91,34 +91,34 @@ Tessa Welch<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/08.jpg" /></p>
 
-<p>Zu ihrer Überraschung öffnete ein Hund die Tür und sagte: “Was willst du?”
-“Ich habe mich verlaufen und brauche einen Schlafplatz.”, antwortete Nozibele.
-“Komm herein oder ich beiße dich!”, sagte der Hund. Also trat Nozibele ein.</p>
+<p>Zu ihrer Überraschung öffnete ein Hund die Tür und sagte: „Was willst du?“
+“Ich habe mich verlaufen und brauche einen Schlafplatz“, antwortete Nozibele.
+“Komm herein oder ich beiße dich!“, drohte der Hund. Also trat Nozibele ein.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/09.jpg" /></p>
 
-<p>Dann sagte der Hund: “Koch für mich!”
-“Aber ich habe noch nie für einen Hund gekocht.”, antwortete Nozibele.
-“Koch oder ich beiße dich!”, sagte der Hund. Also kochte Nozibele dem Hund etwas.</p>
+<p>Dann verlangte der Hund: „Koch für mich!“
+“Aber ich habe noch nie für einen Hund gekocht“, antwortete Nozibele.
+“Koch oder ich beiße dich!“, kläffte der Hund. Also kochte Nozibele dem Hund etwas.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/10.jpg" /></p>
 
-<p>Dann sagte der Hund: “Mach mein Bett für mich!”
-Nozibele antwortete: “Ich habe noch nie einem Hund das Bett gemacht.”
-“Mach das Bett oder ich beiße dich!”, sagte der Hund. Also machte Nozibele das Bett.</p>
+<p>Dann meinte der Hund: „Mach mein Bett für mich!“
+Nozibele antwortete: „Ich habe noch nie einem Hund das Bett gemacht.“
+“Mach das Bett oder ich beiße dich!“, kläffte der Hund. Also machte Nozibele das Bett.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/11.jpg" /></p>
 
-<p>Jeden Tag musste sie für den Hund kochen und kehren und waschen. Dann sagte der Hund eines Tages: “Nozibele, heute kommen einige Freunde zu Besuch. Kehre das Haus, koch das Essen und wasch meine Sachen, bevor ich zurückkomme.”</p>
+<p>Jeden Tag musste sie für den Hund kochen und kehren und waschen. Dann sagte der Hund eines Tages: „Nozibele, heute kommen einige Freunde zu Besuch. Kehre das Haus, koch das Essen und wasch meine Sachen, bevor ich zurück bin.“</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
@@ -132,14 +132,14 @@ Nozibele antwortete: “Ich habe noch nie einem Hund das Bett gemacht.”
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
 
-<p>Als der Hund zurückkam, suchte er nach Nozibele. “Nozibele, wo bist du?”, rief er. “Ich bin hier, unter dem Bett.”, sagte das erste Haar. “Ich bin hier, hinter der Tür.”, sagte das zweite Haar. “Ich bin hier, im Kral.”, sagte das dritte Haar.</p>
+<p>Als der Hund zurückkam, suchte er nach Nozibele. „Nozibele, wo bist du?“, rief er. „Ich bin hier, unter dem Bett.“, sagte das erste Haar. „Ich bin hier, hinter der Tür.“, sagte das zweite Haar. „Ich bin hier, im Kral.“, sagte das dritte Haar.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/14.jpg" /></p>
 
-<p>Da wusste der Hund, dass Nozibele ihn reingelegt hatte und so rannte und rannte den ganzen Weg bis ins Dorf. Aber Nozibeles Brüder warteten dort mit großen Stöcken. Der Hund machte kehrt und lief davon und wurde seitdem nie mehr gesehen.</p>
+<p>Da wusste der Hund, dass Nozibele ihn reingelegt hatte und so rannte und rannte er den ganzen Weg bis ins Dorf. Aber Nozibeles Brüder warteten dort mit großen Stöcken. Der Hund machte kehrt und lief davon und wurde seitdem nie mehr gesehen.</p>
 
 <div class="pagenum">13</div>
 <p></div><div class="pagebreak"></p>
