--- a/stories/de/0072_die-rache-des-honiganzeiger.html
+++ b/stories/de/0072_die-rache-des-honiganzeiger.html
@@ -49,70 +49,70 @@ Zulu folktale<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/02.jpg" /></p>
 
-<p>Das ist die Geschichte von Ngede, dem Honiganzeiger, und einem gierigen jungen Mann namens Gingile. Eines Tages während Gingile bei der Jagd war hörte er den Ruf von Ngede. In Gingiles Mund lief beim Gedanken an Honig das Wasser im Mund zusammen. Er blieb stehen und lauschte genau und hielt Ausschau nach dem Vogel in den Ästen über seinem Kopf. “Chitik-chitik-chitik”, zwitscherte der kleine Vogel, als er von Baum zu Baum flog. “Chitik, chitik, chitik”, rief er und und blieb von zeit zu Zeit sitzen, um sicher zu sein, dass Gingile ihm nachlief.</p>
+<p>Das ist die Geschichte von Ngede, dem Honiganzeiger, und einem gierigen jungen Mann namens Gingile. Eines Tages während Gingile bei der Jagd war, hörte er den Ruf von Ngede. Gingile lief beim Gedanken an Honig das Wasser im Mund zusammen. Er blieb stehen, lauschte genau und hielt Ausschau nach dem Vogel in den Ästen über seinem Kopf. „Chitik-chitik-chitik“, zwitscherte der kleine Vogel, als er von Baum zu Baum flog. „Chitik, chitik, chitik“, rief er und und blieb von Zeit zu Zeit sitzen, um sicher zu sein, dass Gingile ihm nachlief.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/03.jpg" /></p>
 
-<p>Nach einer halben Stunde kamen sie zu einem großen Feigenbaum. Ngede hüpfte aufgeregt auf den Zweigen hin und her. Dann blieb er auf einem Ast sitzen und blickte Gingile an, als ob er sagen wollte: “Hier ist er! Komm doch! Worauf wartest du?” Gingile konnte keine Biene am Baum erblicken, aber er hatte Vertrauen zu Ngede.</p>
+<p>Nach einer halben Stunde kamen sie zu einem großen Feigenbaum. Ngede hüpfte aufgeregt auf den Zweigen hin und her. Dann blieb er auf einem Ast sitzen und blickte Gingile an, als ob er sagen wollte: „Hier ist er! Komm doch! Worauf wartest du?“ Gingile konnte keine Biene am Baum erblicken, aber er hatte Vertrauen zu Ngede.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/04.jpg" /></p>
 
-<p>Also legte Gingile seinen Jagdspeer nieder, sammelte einige trockene Zweige und machte ein kleines Feuer. Als das Feuer im Gang war, legte er einen langen, trockenen Holzstabs in die Mitte des Feuers. Dieses Holz war besonders bekannt dafür, dass es beim Verbrennen sehr viel Rauch produzierte. Er begann, mit dem kalten Ende des Stabs zwischen die Zähne geklemmt, zu klettern.</p>
+<p>Also legte Gingile seinen Jagdspeer nieder, sammelte einige trockene Zweige und machte ein kleines Feuer. Als das Feuer im Gang war, legte er einen langen, trockenen Holzstab in die Mitte des Feuers. Dieses Holz war besonders bekannt dafür, dass es beim Verbrennen sehr viel Rauch produzierte. Er begann, mit dem kalten Ende des Stabs zwischen die Zähne geklemmt, zu klettern.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/05.jpg" /></p>
 
-<p>Bald hörte er das laute Summen der fleißigen Bienen. Sie flogen ein und aus aus einer Höhle in dem Baumstamm - ihrem Stock. Als Gingile den Stock erreichte, stieß er das rauchenden Ende des Stabs in die Baumhöhle. Die Bienen schwärmten wütend und böse heraus. Sie flogen davon, weil die den Rauch nicht mochten - aber ohne Gingile zu stechen!</p>
+<p>Bald hörte er das laute Summen der fleißigen Bienen. Sie flogen ein und aus aus einer Höhle in dem Baumstamm - ihrem Bienenstock. Als Gingile den Stock erreichte, stieß er das rauchenden Ende des Stabs in die Baumhöhle. Die Bienen schwärmten wütend und böse heraus. Sie flogen davon, weil sie den Rauch nicht mochten - aber ohne Gingile zu stechen!</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/06.jpg" /></p>
 
-<p>Als die Bienen weg waren, steckte Gingile seine hand in das Nest. Er zog händevoll schwerer Waben voll mit Honig und fetten weißen Larven. Er schob die Waben vorsichtig in die Tasche,legt sie auf seine Schulter und begann nach unten zu klettern.</p>
+<p>Als die Bienen weg waren, steckte Gingile seine Hand in das Nest. Er zog Hände voller schwerer Waben gefüllt mit Honig und fetten weißen Larven hervor. Er schob die Waben vorsichtig in die Tasche, legte sie auf seine Schulter und begann, nach unten zu klettern.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/07.jpg" /></p>
 
-<p>Ngede beobachtete genau jede Bewegung von Gingile. Er wartete auf ein fettes Stück Honigwabe als Dankeschön an den Honiganzeiger. Ngede flatterte von Ast zu Ast immer näher nach unten zum Boden. Endlich erreichte Gingile das Ende des Baums. Ngede setzte sich auf einen Stein in die Nähe des Jungen und wartete auf seine Belohnung.</p>
+<p>Ngede beobachtete jede Bewegung von Gingile genau. Er wartete auf ein fettes Stück Honigwaben als Dank an den Honiganzeiger. Ngede flatterte von Ast zu Ast, immer näher zum Boden. Endlich erreichte Gingile das Ende des Baums. Ngede setzte sich auf einen Stein in die Nähe des Jungen und wartete auf seine Belohnung.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/08.jpg" /></p>
 
-<p>Aber Gingile löschte das Feuer, nahm seinen Speed und machte sich nach Hause auf ohne auf den Vogel zu achten. Ngede rief wütend: “VIC-Torr! VIC-torr!” Gingile hielt, schaute den kleinen Vogel an und lachte laut. “Du willst was von dem Honig, nicht wahr, mein Freund? Ha! Aber ich habe die ganze Arbeit gemacht, und ich wurde gestochen. Warum sollte ich dir was von diesem wunderbaren Honig geben?” Dann lief er davon. Ngede war außer sich! So durfte man ihn nicht behandeln! Aber er würde sich rächen.</p>
+<p>Aber Gingile löschte das Feuer, nahm seinen Speer und machte sich nach Hause auf ohne auf den Vogel zu achten. Ngede rief wütend: „VIC-Torr! VIC-torr!“ Gingile hielt an, schaute den kleinen Vogel an und lachte laut: „Du willst was von dem Honig, nicht wahr, mein Freund? Ha! Aber ich habe die ganze Arbeit gemacht, und ich wurde gestochen. Warum sollte ich dir was von diesem wunderbaren Honig geben?“ Dann lief er davon. Ngede war außer sich! So durfte man ihn nicht behandeln! Aber er würde sich rächen.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/09.jpg" /></p>
 
-<p>Einige Wochen später hörte Gingile erneut Ngedes Honigruf. Er erinnerte sich an den köstlichen Honig und folgte dem Vogel erneut schleunig. Nachdem er Gingile an den Rand des Waldes geführt hatte, hielt Ngede an, um sich in einer großen Schirmakazie auszuruhen. “Ahh”, dachte Gingile, “der Bienenstock muss in diesem Baum sein.” Schnell machte er ein kleines Feuer und find an mit dem rauchenden Ast zwischen den Zähnen zu klettern. Ngede saß und sah zu.</p>
+<p>Einige Wochen später hörte Gingile erneut Ngedes Honigruf. Er erinnerte sich an den köstlichen Honig und folgte dem Vogel erneut schleunig. Nachdem er Gingile an den Rand des Waldes geführt hatte, hielt Ngede an, um sich in einer großen Schirmakazie auszuruhen. „Ahh“, dachte Gingile, „der Bienenstock muss in diesem Baum sein.“ Schnell machte er ein kleines Feuer und fing an, mit dem rauchenden Ast zwischen den Zähnen, zu klettern. Ngede saß daneben und sah zu.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/10.jpg" /></p>
 
-<p>Beim Klettern wunderte sich Gingile, warum er nicht das übliche Summen hört. “Vielleicht ist der Bienenstock sehr weit im Baum”, dachte er. He zog sich einen Ast weiter nach oben. Aber statt einem Bienenstock, sah er einem Leoparden ins Auge. Leopard war sehr böse darüber, dass ihr Schlaf so rüde unterbrochen wurde. Sie kniff ihre Augen zusammen und öffnete ihr Maul, um ihre sehr großen und sehr scharfen Zähne zu zeigen.</p>
+<p>Beim Klettern wunderte sich Gingile, warum er nicht das übliche Summen hört. „Vielleicht ist der Bienenstock sehr weit im Baum“, dachte er. Er zog sich einen Ast weiter nach oben. Aber anstelle eines Bienenstocks traf er oben auf einen Leoparden. Leopard war sehr böse darüber, dass ihr Schlaf so rüde unterbrochen wurde. Sie kniff ihre Augen zusammen und öffnete ihr Maul, um ihre sehr großen und scharfen Zähne zu zeigen.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/11.jpg" /></p>
 
-<p>Bevor Leopard Gingile zu fassen bekam, rauschte er den Baum hinunter. In der Eile verfehlte er einen Ast und plumpste auf den Boden, wobei er sich seinen Knöchel verstauchte. Er humpelte davon so schnell er konnte. Zu seinem Glück war Leopard immer noch zu müde um ihn zu jagen. Ngede, der Honiganzeiger, bekam seine Rache. Und Gingile hatte seine Lektion gelernt.</p>
+<p>Bevor Leopard Gingile zu fassen bekam, rauschte er den Baum hinunter. In der Eile verfehlte er einen Ast und plumpste auf den Boden, wobei er sich seinen Knöchel verstauchte. Er humpelte davon so schnell er konnte. Zu seinem Glück war Leopard immer noch zu müde, um ihn zu jagen. Ngede, der Honiganzeiger, bekam seine Rache. Und Gingile hatte seine Lektion gelernt.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
