--- a/stories/de/0095_zama-ist-toll.html
+++ b/stories/de/0095_zama-ist-toll.html
@@ -49,21 +49,21 @@ Michael Oguttu<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/02.jpg" /></p>
 
-<p>Mein kleiner Bruder schläft lange. Ich wache früh auf weil ich groß bin.</p>
+<p>Mein kleiner Bruder schläft lange. Ich wache früh auf weil ich toll bin.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/03.jpg" /></p>
 
-<p>Ich bin derjenige, der die Sonne herein lässt.</p>
+<p>Ich bin diejenige, die die Sonne herein lässt.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/04.jpg" /></p>
 
-<p>“Du bist mein Morgenstern”, sagt Ma.</p>
+<p>“Du bist mein Morgenstern“, sagt Ma.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -84,7 +84,7 @@ Michael Oguttu<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/07.jpg" /></p>
 
-<p>Ma erinnert mich: “Vergiss Deine Zähne nicht.” Ich antworte: “Niemals, ich doch nicht!”</p>
+<p>Ma erinnert mich: „Vergiss Deine Zähne nicht.“ Ich antworte: „Niemals, ich doch nicht!“</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -98,7 +98,7 @@ Michael Oguttu<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/09.jpg" /></p>
 
-<p>Dann kleide ich mich an. “Ich  bin nun groß, Ma.”, sage ich.</p>
+<p>Dann ziehe ich mich an. „Ich bin nun groß, Ma.“, sage ich.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
