--- a/stories/de/0111_warum-hippos-keine-haare-haben.html
+++ b/stories/de/0111_warum-hippos-keine-haare-haben.html
@@ -49,7 +49,7 @@ Basilio Gimo, David Ker<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/02.jpg" /></p>
 
-<p>Eines Tages lief Hippo am Fluss entlang.</p>
+<p>Eines Tages lief Hase am Fluss entlang.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -63,42 +63,42 @@ Basilio Gimo, David Ker<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/04.jpg" /></p>
 
-<p>Hippo bemerkte Hase nicht und trat aus Versehen auf Hases Fuß. Hase schrie los: „Du, Hippo! Siehst du nicht, dass du auf meinem Fuß stehst?”</p>
+<p>Hippo bemerkte Hase nicht und trat aus Versehen auf Hases Fuß. Hase schrie los: „Du, Hippo! Siehst du nicht, dass du auf meinem Fuß stehst?“</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/05.jpg" /></p>
 
-<p>Hippo entschuldigte sich: „Tut mir leid. I habe dich nicht gesehen. Bitte vergib mir!” Aber Hase hörte nicht zu und schrie Hippo an: „Das hast du mit Absicht gemacht! Eines Tages wirst du sehen! Dafür wirst du bezahlen!”</p>
+<p>Hippo entschuldigte sich: „Tut mir leid. Ich habe dich nicht gesehen. Bitte vergib mir!“ Aber Hase hörte nicht zu und schrie Hippo an: „Das hast du mit Absicht gemacht! Eines Tages wirst du sehen! Dafür wirst du bezahlen!“</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
 
-<p>Hase zog los, um Feuer zu suchen und sagte: „Los, verbrenne Hippo, wenn sie aus dem Wasser kommt, um Gras zu fressen. Sie ist auf mich drauf getreten!” Das Feuer antwortete: „Kein Problem, Hase, mein Freund. I werde tun, um was du mich bittest.”</p>
+<p>Hase zog los, um Feuer zu suchen und sagte: „Los, verbrenne Hippo, wenn sie aus dem Wasser kommt, um Gras zu fressen. Sie ist auf mich drauf getreten!“ Das Feuer antwortete: „Kein Problem, Hase, mein Freund. Ich werde tun, worum du bittest.“</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/07.jpg" /></p>
 
-<p>Später, Hippo fraß gerade Gras weit vom Fluss entfernt, als “wusch!” die Flammen ausbrachen. Die Flammen begannen, Hippos Haare zu verbrennen.</p>
+<p>Als Hippo später weit vom Fluss entfernt Gras fraß, brachen -wusch!- die Flammen aus und begannen, Hippos Haare zu verbrennen.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/08.jpg" /></p>
 
-<p>Hippo begann zu weinen und lief zum Wasser. All ihr Haar war vom Feuer weggebrannt. Hippo schluchzte: „Mein Haar ist im Feuer verbrannt! All mein Haar is weg! Mein schönes Haar!”</p>
+<p>Hippo fing an zu weinen und lief zum Wasser. All ihr Haar war vom Feuer verbrannt. Hippo schluchzte: „Mein Haar ist im Feuer verbrannt! All mein Haar ist weg! Mein schönes Haar!“</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/09.jpg" /></p>
 
-<p>Hase freute sich, dass Hippos Haar verbrannt war. Und bis heute, aus Angst vor dem Feuer, bleibt Hippo immer in der Nähe des Wasser.</p>
+<p>Hase freute sich, dass Hippos Haar verbrannt war. Und bis heute, aus Angst vor dem Feuer, bleibt Hippo immer in der Nähe von Wasser.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
