--- a/stories/de/0111_warum-hippos-keine-haare-haben_slides.html
+++ b/stories/de/0111_warum-hippos-keine-haare-haben_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/02.jpg" /></p>
-<p>Eines Tages lief Hippo am Fluss entlang.</p>
+<p>Eines Tages lief Hase am Fluss entlang.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/04.jpg" /></p>
-<p>Hippo bemerkte Hase nicht und trat aus Versehen auf Hases Fuß. Hase schrie los: „Du, Hippo! Siehst du nicht, dass du auf meinem Fuß stehst?&quot;</p>
+<p>Hippo bemerkte Hase nicht und trat aus Versehen auf Hases Fuß. Hase schrie los: „Du, Hippo! Siehst du nicht, dass du auf meinem Fuß stehst?“</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/05.jpg" /></p>
-<p>Hippo entschuldigte sich: „Tut mir leid. I habe dich nicht gesehen. Bitte vergib mir!&quot; Aber Hase hörte nicht zu und schrie Hippo an: „Das hast du mit Absicht gemacht! Eines Tages wirst du sehen! Dafür wirst du bezahlen!&quot;</p>
+<p>Hippo entschuldigte sich: „Tut mir leid. Ich habe dich nicht gesehen. Bitte vergib mir!“ Aber Hase hörte nicht zu und schrie Hippo an: „Das hast du mit Absicht gemacht! Eines Tages wirst du sehen! Dafür wirst du bezahlen!“</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
-<p>Hase zog los, um Feuer zu suchen und sagte: „Los, verbrenne Hippo, wenn sie aus dem Wasser kommt, um Gras zu fressen. Sie ist auf mich drauf getreten!&quot; Das Feuer antwortete: „Kein Problem, Hase, mein Freund. I werde tun, um was du mich bittest.&quot;</p>
+<p>Hase zog los, um Feuer zu suchen und sagte: „Los, verbrenne Hippo, wenn sie aus dem Wasser kommt, um Gras zu fressen. Sie ist auf mich drauf getreten!“ Das Feuer antwortete: „Kein Problem, Hase, mein Freund. Ich werde tun, worum du bittest.“</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/07.jpg" /></p>
-<p>Später, Hippo fraß gerade Gras weit vom Fluss entfernt, als &quot;wusch!&quot; die Flammen ausbrachen. Die Flammen begannen, Hippos Haare zu verbrennen.</p>
+<p>Als Hippo später weit vom Fluss entfernt Gras fraß, brachen -wusch!- die Flammen aus und begannen, Hippos Haare zu verbrennen.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/08.jpg" /></p>
-<p>Hippo begann zu weinen und lief zum Wasser. All ihr Haar war vom Feuer weggebrannt. Hippo schluchzte: „Mein Haar ist im Feuer verbrannt! All mein Haar is weg! Mein schönes Haar!&quot;</p>
+<p>Hippo fing an zu weinen und lief zum Wasser. All ihr Haar war vom Feuer verbrannt. Hippo schluchzte: „Mein Haar ist im Feuer verbrannt! All mein Haar ist weg! Mein schönes Haar!“</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/09.jpg" /></p>
-<p>Hase freute sich, dass Hippos Haar verbrannt war. Und bis heute, aus Angst vor dem Feuer, bleibt Hippo immer in der Nähe des Wasser.</p>
+<p>Hase freute sich, dass Hippos Haar verbrannt war. Und bis heute, aus Angst vor dem Feuer, bleibt Hippo immer in der Nähe von Wasser.</p>
 <center>
 <strong>8</strong>
 </center>
