--- a/stories/de/0120_haare.html
+++ b/stories/de/0120_haare.html
@@ -98,7 +98,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Deutsch</div><div class="pag
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/09.jpg" /></p>
 
-<p>Themba hat seine Haare rasiert.</p>
+<p>Themba hat seine Haare abrasiert.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
