--- a/stories/de/0129_mein-fauler-kleiner-bruder_slides.html
+++ b/stories/de/0129_mein-fauler-kleiner-bruder_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/07.jpg" /></p>
-<p>Ich wasche das Geschirr.</p>
+<p>Ich spüle das Geschirr.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/08.jpg" /></p>
-<p>Warum arbeite ich so viel... während mein Bruder emsig spielt?</p>
+<p>Warum arbeite ich so viel … während mein Bruder munter spielt?</p>
 <center>
 <strong>7</strong>
 </center>
