--- a/stories/de/0201_eselskind_slides.html
+++ b/stories/de/0201_eselskind_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/04.jpg" /></p>
-<p>Schüchtern, aber tapfer näherte sich das Mädchen der Frau. &quot;Sie soll bei uns bleiben&quot;, entschieden das Volk des kleinen Mädchens. &quot;Wir bieten ihr und ihrem Kind Schutz.&quot;</p>
+<p>Schüchtern, aber tapfer näherte sich das Mädchen der Frau. „Sie soll bei uns bleiben“, entschieden das Volk des kleinen Mädchens. „Wir bieten ihr und ihrem Kind Schutz.“</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/05.jpg" /></p>
-<p>Das Kind war bald unterwegs. &quot;Press!&quot; &quot;Bringt Decken!&quot; &quot;Wasser!&quot; &quot;Preeeeeeessen!&quot;</p>
+<p>Das Kind war bald unterwegs. „Press!“, „Bringt Decken!“, „Wasser!“, „Preeeeeeessen!“</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/06.jpg" /></p>
-<p>Aber als sie das Baby sahen, sprangen alle erschrocken zurück. &quot;Ein Esel?!&quot;</p>
+<p>Aber als sie das Baby sahen, sprangen alle erschrocken zurück. „Ein Esel?!“</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/07.jpg" /></p>
-<p>Alle fingen an zu streiten. &quot;Wir haben gesagt, wir beschützen Mutter und Kind, und das werden wir auch&quot;, sagten die Einen. &quot;Aber das wird uns Pech bringen!&quot;, sagten die Anderen.</p>
+<p>Alle fingen an zu streiten. „Wir haben gesagt, wir beschützen Mutter und Kind, und das werden wir auch tun“, sagten die Einen. „Aber das wird uns Unglück bringen!“, sagten die Anderen.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/10.jpg" /></p>
-<p>Nun wenn das Kind nicht gewachsen wäre, wäre vielleicht alles anders geworden. Aber das Eselskind wuchs und wuchs bis er nicht mehr auf den Rücken seiner Mutter passte. Und egal, wie sehr er sich bemühte, er konnte sich nicht wie ein Mensch benehmen. Seine Mutter war oft müde und frustriert. Manchmal gab sie ihm Arbeit, die für Tiere bestimmt war.</p>
+<p>Nun, wenn das Kind nicht gewachsen wäre, wäre vielleicht alles anders geworden. Aber das Eselskind wuchs und wuchs bis er nicht mehr auf den Rücken seiner Mutter passte. Und egal, wie sehr er sich bemühte, er konnte sich nicht wie ein Mensch benehmen. Seine Mutter war oft müde und frustriert. Manchmal gab sie ihm Arbeit, die für Tiere bestimmt war.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/11.jpg" /></p>
-<p>Verwirrung and Ärger stauten sich in Esel. Er konnte dies nicht und das nicht tun. He konnte so oder so nicht sein. Er wurde so wütend, dass er eines Tages seine Mutter zu Boden trat.</p>
+<p>Verwirrung und Ärger sammelten sich in Esel. Er konnte dies nicht und das nicht tun. Er konnte so und so nicht sein. Er wurde so wütend, dass er eines Tages seine Mutter zu Boden trat.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/13.jpg" /></p>
-<p>Als er aufhörte zu laufen, war es Nacht und Esel hatte sich verlaufen. &quot;Ih Ah?&quot; flüsterte er in die Dunkelheit. &quot;Ih Ah?&quot;, hörte man ein Echo. Er war allein. Er rollte sich zusammen und fiel in einen tiefen und unruhigen Schlaf.</p>
+<p>Als er aufhörte zu laufen, war es Nacht und Esel hatte sich verlaufen. „Ih Ah?“, flüsterte er in die Dunkelheit. „Ih Ah?“, hörte man ein Echo. Er war allein. Er rollte sich zusammen und fiel in einen tiefen und unruhigen Schlaf.</p>
 <center>
 <strong>12</strong>
 </center>
@@ -214,7 +214,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/15.jpg" /></p>
-<p>Esel blieb bei dem alten Mann, der ihm verschiedene Überlebensregeln beibrachte. Esel hörte zu und lernte, genau wie der alte Mann. Sie halfen sich gegenseitig und lachten zusammen.</p>
+<p>Esel blieb bei dem alten Mann, der ihm verschiedene Überlebenstricks beibrachte. Esel hörte zu und lernte, genau wie der alte Mann. Sie halfen sich gegenseitig und lachten zusammen.</p>
 <center>
 <strong>14</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/17.jpg" /></p>
-<p>Hoch oben in den Wolken schliefen sie ein. Esel träumte, dass seine Mutter krank sei und nach ihm rief. Und als er aufwachte...</p>
+<p>Hoch oben in den Wolken schliefen sie ein. Esel träumte, dass seine Mutter krank sei und nach ihm rief. Und als er aufwachte …</p>
 <center>
 <strong>16</strong>
 </center>
@@ -241,7 +241,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/18.jpg" /></p>
-<p>waren die Wolken zusammen mit seinem Freund, dem alten Mann verschwunden.</p>
+<p>… waren die Wolken zusammen mit seinem Freund, dem alten Mann verschwunden.</p>
 <center>
 <strong>17</strong>
 </center>
