--- a/stories/de/0234_andiswa-fußballstar_slides.html
+++ b/stories/de/0234_andiswa-fußballstar_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/03.jpg" /></p>
-<p>Der Trainer stützt die Hände in die Hüften. &quot;An dieser Schule dürfen nur Jungen Fußball spielen.&quot;, sagt er.</p>
+<p>Der Trainer stemmte die Hände in die Hüften. „An dieser Schule dürfen nur Jungen Fußball spielen.“, sagt er.</p>
 <center>
 <strong>2</strong>
 </center>
