--- a/stories/de/0243_ferien-mit-großmutter.html
+++ b/stories/de/0243_ferien-mit-großmutter.html
@@ -63,7 +63,7 @@ Violet Otieno<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/04.jpg" /></p>
 
-<p>Früh am nächsten Morgen machten sie sich im Auto ihres Vaters zum Dorf auf. Sie fuhren an Bergen, wilden Tieren und Teeplantagen vorbei. Die zählten Autos und sangen Lieder.</p>
+<p>Früh am nächsten Morgen machten sie sich im Auto ihres Vaters zum Dorf auf. Sie fuhren an Bergen, wilden Tieren und Teeplantagen vorbei. Sie zählten Autos und sangen Lieder.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -77,14 +77,14 @@ Violet Otieno<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/06.jpg" /></p>
 
-<p>Vater weckte Odongo und Apiyo als sie im Dorf angekommen waren. Nyar-Kanyada, ihre Großmutter, lag auf einer Matte unter einem Baum und entspannte. Nyar-Kanyada in Luo bedeutet ‘Tochter des Volkes von Kanyada’. Sie war eine schöne und starke Frau.</p>
+<p>Vater weckte Odongo und Apiyo, als sie im Dorf ankamen. Nyar-Kanyada, ihre Großmutter, lag auf einer Matte unter einem Baum und entspannte. Nyar-Kanyada in Luo bedeutet „Tochter des Volkes von Kanyada“. Sie war eine schöne und starke Frau.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/07.jpg" /></p>
 
-<p>Nyar-Kanyada bat sie ins Haus und tanzte freudig im Zimmer herum. Ihre Enkelkinder überreichten ihr begeistert ihre Geschenke. “Öffne mein Geschenk zuerst”, sagte Odongo. “Nein, meins zuerst!”, entgegnete Apiyo.</p>
+<p>Nyar-Kanyada bat sie ins Haus und tanzte freudig im Zimmer herum. Ihre Enkelkinder überreichten ihr begeistert ihre Geschenke. „Öffne mein Geschenk zuerst“, meinte Odongo. „Nein, meins zuerst!“, entgegnete Apiyo.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -112,7 +112,7 @@ Violet Otieno<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/11.jpg" /></p>
 
-<p>Als es dunkel war gingen sie zum Abendessen ins Haus zurück. Noch bevor sie fertig waren, schliefen sie ein.</p>
+<p>Als es dunkel war, gingen sie zum Abendessen ins Haus zurück. Noch bevor sie fertig waren, schliefen sie ein.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
@@ -133,7 +133,7 @@ Violet Otieno<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/14.jpg" /></p>
 
-<p>Nyar-Kanyada lehrte ihre Enkelkinder, wie man weichen Ugali als Beilage für den Eintopf zubereitet. Sie zeigte ihnen, wie man Kokosreis als Beilage für Bratfisch macht.</p>
+<p>Nyar-Kanyada lehrte ihre Enkelkinder, wie man weichen Ugali als Beilage für den Eintopf zubereitet. Sie zeigte ihnen, wie man Kokosreis als zum Bratfisch macht.</p>
 
 <div class="pagenum">13</div>
 <p></div><div class="pagebreak"></p>
@@ -154,7 +154,7 @@ Violet Otieno<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/17.jpg" /></p>
 
-<p>Am Ende des Tages tranken sie einen Chaitee zusammen. Sie halfen Großmutter das eingenommene Geld zu zählen.</p>
+<p>Am Ende des Tages tranken sie einen Chai-Tee zusammen. Sie halfen Großmutter, das eingenommene Geld zu zählen.</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
@@ -168,7 +168,7 @@ Violet Otieno<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/19.jpg" /></p>
 
-<p>Als ihr Vater kam, um sie abzuholen, wollten sie nicht gehen. Die Kinder flehten Nyar-Kanyada an mit ihnen in die Stadt mitzukommen. Sie lächelte und sagte: “Ich bin zu alt für die Stadt. Ich werde darauf warten, dass ihr wieder zu mir ins Dorf kommt.”</p>
+<p>Als ihr Vater kam, um sie abzuholen, wollten sie nicht gehen. Die Kinder flehten Nyar-Kanyada an, mit ihnen in die Stadt zukommen. Sie lächelte und sagte: „Ich bin zu alt für die Stadt. Ich werde darauf warten, dass ihr wieder zu mir ins Dorf kommt.“</p>
 
 <div class="pagenum">18</div>
 <p></div><div class="pagebreak"></p>
@@ -182,7 +182,7 @@ Violet Otieno<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/21.jpg" /></p>
 
-<p>Als Odongo und Apiyo wieder in die Schule gingen erzählten sie ihren Freunden vom Dorfleben. Manchen Kinder fanden das Leben in der Stadt gut. Aber vor allem waren sich alle einig, dass Odongo und Apiyo eine wundervolle Großmutter hatten!</p>
+<p>Als Odongo und Apiyo wieder in die Schule gingen erzählten sie ihren Freunden vom Dorfleben. Manche Kinder fanden das Leben in der Stadt gut. Aber vor allem waren sich alle einig, dass Odongo und Apiyo eine wundervolle Großmutter hatten!</p>
 
 <div class="pagenum">20</div>
 <p></div><div class="pagebreak"></p>
