--- a/stories/de/0262_magozwe.html
+++ b/stories/de/0262_magozwe.html
@@ -49,28 +49,28 @@ Lesley Koyi<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/02.jpg" /></p>
 
-<p>In der geschäftigen Stadt Nairobi, weit entfernt von einem liebevollen Zuhause, lebte eine Gruppe obdachloser Jungen. Sie lebten in den Tag hinein. Eines Morgens packten sie ihre Matten nach einer kalten Nacht auf dem Bürgersteig. Sie machten ein Feuer aus Müll  gegen die Kälte. Einer der Jungen unter ihnen war Magozwe. Er war der Jüngste.</p>
+<p>In der geschäftigen Stadt Nairobi, fern eines liebevollen Zuhauses, lebte eine Gruppe obdachloser Jungen. Sie lebten in den Tag hinein. Eines Morgens packten sie ihre Matten nach einer kalten Nacht auf dem Bürgersteig. Sie machten ein Feuer aus Müll gegen die Kälte. Einer der Jungen unter ihnen war Magozwe. Er war der Jüngste.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/03.jpg" /></p>
 
-<p>Als Magozwes Eltern starben war er erst fünf Jahre alt. Er lebte von dort an mit seinem Onkel. Dieser Mann kümmerte sich nicht um den Jungen. Er gab Magozwe nicht genug Essen. Er ließ den Jungen sehr hart arbeiten.</p>
+<p>Als Magozwes Eltern starben war er erst fünf Jahre alt. Er lebte von dort an mit seinem Onkel. Dieser Mann kümmerte sich nicht um den Jungen. Er gab Magozwe nicht genug zu Essen. Er ließ den Jungen sehr hart arbeiten.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/04.jpg" /></p>
 
-<p>Wenn Magozwe sich beschwerte oder nachfragte, schlug in der Onkel. Als Magozwe fragte, ob er zur Schule gehen könnte, schlug ihn sein Onkel und sagte: “Du bist zu dumm um etwas zu lernen.” Nach drei Jahren unter diesen Bedingungen lief Magozwe seinem Onkel davon. Er lebte fortan auf der Straße.</p>
+<p>Wenn Magozwe sich beschwerte oder nachfragte, schlug ihn der Onkel. Als Magozwe fragte, ob er zur Schule gehen könnte, schlug ihn sein Onkel und sagte: „Du bist zu dumm, um etwas zu lernen.“ Nach drei Jahren unter diesen Bedingungen lief Magozwe seinem Onkel davon. Er lebte fortan auf der Straße.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/05.jpg" /></p>
 
-<p>Das Leben auf der Straße war hart und es war schwer für die meisten Jungen, bloß das tägliche Essen aufzutreiben. Manchmal wurden sie verhaftet, manchmal geschlagen. Wenn sie krank waren, half ihnen niemand. Sie hatten nur wenig Geld, das sie vom Betteln oder durch den Verkauf von gesammelten Plastik und anderem Recycling hatten. Ihr Leben war weiter erschwert durch Kämpfe mit Gruppen von Rivalen, die Teile der Städte beherrschen wollten.</p>
+<p>Das Leben auf der Straße war hart und es war schwer für die meisten Jungen, bloß das tägliche Essen aufzutreiben. Manchmal wurden sie verhaftet, manchmal geschlagen. Wenn sie krank waren, half ihnen niemand. Sie hatten nur wenig Geld, das sie vom Betteln oder durch den Verkauf von gesammeltem Plastik und anderem Recycling hatten. Ihr Leben war weiter erschwert durch Kämpfe mit Gruppen von Rivalen, die Teile der Städte beherrschen wollten.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -84,14 +84,14 @@ Lesley Koyi<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/07.jpg" /></p>
 
-<p>Die Bilder erzählten die Geschichte eines Jungen, der Pilot werden wollte. Magozwe träumte auch davon, ein Pilot zu sein. Manchmal stellte er sich vor, er sei der Junge in der Geschichte.</p>
+<p>Die Bilder erzählten die Geschichte eines Jungen, der Pilot werden wollte. Magozwe träumte auch davon, Pilot zu sein. Manchmal stellte er sich vor, er sei der Junge in der Geschichte.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/08.jpg" /></p>
 
-<p>Es war kalt und Magozwe war auf der Straße und bettelte. Ein Mann trat zu ihm. “Hallo, ich bin Thomas. Ich arbeite in der Nähe, an einem Ort, wo du etwas zu essen bekommen kannst”, sagte der Mann. Er zeigte auf ein gelbes Haus mit einem blauen Dach. “Ich hoffe, du wirst dorthin gehen, um etwas zu essen?”, fragte er. Magozwe sah erst zu dem Mann, und dann zum Haus. “Vielleicht”, antwortet er und ging davon.</p>
+<p>Es war kalt und Magozwe war auf der Straße und bettelte. Ein Mann trat zu ihm. „Hallo, ich bin Thomas. Ich arbeite an einem Ort in der Nähe, wo du etwas zu essen bekommen kannst“, sagte der Mann. Er zeigte auf ein gelbes Haus mit einem blauen Dach. „Ich hoffe, du wirst dorthin gehen, um etwas zu essen?“, fragte er. Magozwe sah erst zu dem Mann, und dann zum Haus. „Vielleicht“, antwortet er und ging davon.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -105,28 +105,28 @@ Lesley Koyi<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/10.jpg" /></p>
 
-<p>Magozwe saß auf dem Bürgersteig und las das Bilderbuch als Thomas sich neben ihn setzte. “Von handelt die Geschichte?”, fragte er. “Von einem Jungen, der Pilot wird”, antwortet Magozwe. “Wie heißt der Junge?”, wollte Thomas wissen. “Weiß ich nicht, ich kann nicht lesen”, gab Magozwe leise zur Antwort.</p>
+<p>Magozwe saß auf dem Bürgersteig und las das Bilderbuch als Thomas sich neben ihn setzte. „Wovon handelt die Geschichte?“, fragte er. „Von einem Jungen, der Pilot wird“, antwortet Magozwe. „Wie heißt der Junge?“, wollte Thomas wissen. „Weiß ich nicht, ich kann nicht lesen“, gab Magozwe leise zurück.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/11.jpg" /></p>
 
-<p>Als sie sich trafen, erzählte Magozwe Thomas seine eigene Geschichte. Es war die Geschichte über seinen Onkel und warum er weggelaufen war. Thomas erwiderte nicht viel und er sagte Magozwe auch nicht, was er tun sollte, aber er hörte stets aufmerksam zu. Manchmal unterhielten sie sich während sie im Haus mit dem blauen Dach aßen.</p>
+<p>Als sie sich trafen, erzählte Magozwe Thomas seine eigene Geschichte. Es war die Geschichte über seinen Onkel und weshalb er weggelaufen war. Thomas erwiderte nicht viel und er sagte Magozwe auch nicht, was er tun sollte, aber er hörte stets aufmerksam zu. Manchmal unterhielten sie sich während sie im Haus mit dem blauen Dach aßen.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/12.jpg" /></p>
 
-<p>Als Magozwe ungefähr zehn Jahre alt war gab Thomas ihm ein Bilderbuch. Die Geschichte handelte von einem Dorfjungen, der zu einem berühmter Fußballspieler heranwuchs. Thomas las Magozwe die Geschichte oft vor, bis er eines Tages sagte: “Ich denke, es ist an der Zeit, dass du zur Schule gehst und lernst zu lesen. Was senkst du?” Thomas erklärte ihm, dass er einen Ort kennt, an dem Kinder wohnen und zur Schule gehen können.</p>
+<p>Als Magozwe ungefähr zehn Jahre alt war gab Thomas ihm ein Bilderbuch. Die Geschichte handelte von einem Dorfjungen, der zu einem berühmter Fußballspieler heranwuchs. Thomas las Magozwe die Geschichte oft vor, bis er eines Tages sagte: „Ich denke, es ist an der Zeit, dass du zur Schule gehst und lesen lernst. Was denkst du?“ Thomas erklärte ihm, dass er einen Ort kennt, an dem Kinder wohnen und zur Schule gehen können.</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/13.jpg" /></p>
 
-<p>Magozwe dachte über diesen neuen Ort nach, und darüber zur Schule zu gehen. Was, wenn sein Onkel recht hatte und er zu dumm war um zu lernen? Was wenn man ihn an dem neuen Ort schlagen würde? Er hatte Angst. “Vielleicht ist es besser, weiter auf der Straße zu leben”, dachte er.</p>
+<p>Magozwe dachte über diesen neuen Ort nach, und darüber zur Schule zu gehen. Was, wenn sein Onkel recht hatte und er zu dumm war, um zu lernen? Was wenn man ihn an dem neuen Ort schlagen würde? Er hatte Angst. „Vielleicht ist es besser, weiter auf der Straße zu leben“, dachte er.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
@@ -140,21 +140,21 @@ Lesley Koyi<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/15.jpg" /></p>
 
-<p>Und so zog Magozwe in ein Zimmer in einem Haus mit grünem Dach. Er teilte das Zimmer mit zwei anderen Jungen. Insgesamt lebten zehn Kinder in dem Haus. Zusammen mit Tante Cissy and ihrem Mann, drei Hunden, einer Katze und einer alten Ziege.</p>
+<p>Und so zog Magozwe in ein Zimmer eines Hauses mit grünem Dach. Er teilte das Zimmer mit zwei anderen Jungen. Insgesamt lebten zehn Kinder in dem Haus. Zusammen mit Tante Cissy und ihrem Mann, drei Hunden, einer Katze und einer alten Ziege.</p>
 
 <div class="pagenum">14</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/16.jpg" /></p>
 
-<p>Magozwe fing an, die Schule zu besuchen und es war schwierig. Er hatte viel aufzuholen. Manchmal wollte er aufgeben. Aber er dachte an den Piloten und den Fußballspieler in den Bilderbüchern. So wie sie gab auch er nicht auf.</p>
+<p>Magozwe begann die Schule und es war schwierig. Er hatte viel aufzuholen. Manchmal wollte er aufgeben. Aber er dachte an den Piloten und den Fußballspieler in den Bilderbüchern. So wie sie gab auch er nicht auf.</p>
 
 <div class="pagenum">15</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/17.jpg" /></p>
 
-<p>Magozwe saß im Garten des Hauses mit dem grünen Dach und las ein Bilderbuch aus der Schule. Thomas kam dazu und setzte sich neben ihn. “Wovon handelt die Geschichte?”, wollte Thomas wissen. “Sie handelt von einem Jungen, der Lehrer wird”, antwortete Magozwe. “Wie heißt der Junge?”, fragte Thomas weiter. “Er heißt Magozwe”, antwortete Magozwe mit einem Lächeln.</p>
+<p>Magozwe saß im Garten des Hauses mit dem grünen Dach und las ein Bilderbuch aus der Schule. Thomas kam dazu und setzte sich neben ihn. „Wovon handelt die Geschichte?“, wollte Thomas wissen. „Sie handelt von einem Jungen, der Lehrer wird“, antwortete Magozwe. „Wie heißt der Junge?“, fragte Thomas weiter. „Er heißt Magozwe“, entgegnete Magozwe mit einem Lächeln.</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
