--- a/stories/de/0291_was-vusis-schwester-sagte_slides.html
+++ b/stories/de/0291_was-vusis-schwester-sagte_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/02.jpg" /></p>
-<p>Eines frühen Morgens rief Omi Vusi. &quot;Vusi, bitte bring deinen Eltern dieses Ei. Sie wollen eine große Torte für die Hochzeit deiner Schwester machen.</p>
+<p>Eines frühen Morgens rief Omi Vusi: „Vusi, bitte bring deinen Eltern dieses Ei. Sie wollen eine große Torte für die Hochzeit deiner Schwester backen.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/04.jpg" /></p>
-<p>&quot;Was hast du getan?&quot;, rief Vusi. &quot;Dieses Ei war für einen Kuchen. Der Kuchen war für die Hochzeit meiner Schwester. Was wird meine Schwester sagen, wenn es keine Hochzeitstorte gibt?&quot;</p>
+<p>“Was hast du getan?“, rief Vusi. „Dieses Ei war für eine Torte. Die Torte war für die Hochzeit meiner Schwester. Was wird meine Schwester sagen, wenn es keine Hochzeitstorte gibt?“</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/05.jpg" /></p>
-<p>Den Jungen tat leid, dass sie Vusi geärgert hatten. &quot;Wir können nicht mit der Torte helfen, aber hier ist ein Gehstock für deine Schwester&quot;, sagte einer. Vusi setzte seine Reise fort.</p>
+<p>Den Jungen tat es leid, dass sie Vusi geärgert hatten. „Wir können nicht mit der Torte helfen, aber hier ist ein Gehstock für deine Schwester“, sagte einer. Vusi setzte seine Reise fort.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/06.jpg" /></p>
-<p>Unterwegs traf er zwei Männer, die ein Haus bauten. &quot;Können wir den stabilen Stock benutzen?&quot;, fragte einer. Aber der Stock war nicht hart genug für das Haus und brach.</p>
+<p>Unterwegs traf er zwei Männer, die ein Haus bauten. „Können wir den stabilen Stock benutzen?“, fragte einer. Aber der Stock war nicht hart genug für das Haus und brach.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/07.jpg" /></p>
-<p>&quot;Was hast du getan?&quot;, rief Vusi, &quot;dieser Stock war ein Geschenk für meine Schwester. Die Obstpflücker gaben mir den Stock, weil sie mein Ei für den Kuchen zerbrochen haben. Der Kuchen war für die Hochzeit meiner Schwester. Jetzt habe ich kein Ei, keinen Kuchen und kein Geschenk. Was wird meine Schwester bloß sagen?&quot;</p>
+<p>“Was hast du getan?“, rief Vusi. „Dieser Stock war ein Geschenk für meine Schwester. Die Obstpflücker gaben mir den Stock, weil sie mein Ei für die Torte zerbrochen haben. Die Torte war für die Hochzeit meiner Schwester. Jetzt habe ich kein Ei, keine Torte und kein Geschenk. Was wird meine Schwester bloß sagen?“</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/08.jpg" /></p>
-<p>Den Bauarbeitern tat es leid, dass sie den Stock gebrochen hatten. &quot;Wir können dir mit dem Kuchen nicht helfen, aber hier ist etwas Stroh für deine Schwester&quot;, meinte einer von ihnen. Und so setzte Vusi seine Reise fort.</p>
+<p>Den Bauarbeitern tat es leid, dass sie den Stock durchgebrochen hatten. „Wir können dir mit der Torte nicht helfen, aber hier ist etwas Stroh für deine Schwester“, meinte einer von ihnen. Und so setzte Vusi seine Reise fort.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/09.jpg" /></p>
-<p>Unterwegs traf Vusi eine Kuh. &quot;Was für leckeres Stroh, kann ich ein bisschen davon?&quot; fragte die Kuh. Aber das Stroh war so lecker, dass die Kuh es ganz aufaß!</p>
+<p>Unterwegs traf Vusi eine Kuh. „Was für leckeres Stroh, kann ich ein bisschen davon?“ fragte die Kuh. Aber das Stroh war so lecker, dass die Kuh es ganz auffraß!</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/10.jpg" /></p>
-<p>&quot;Was hast du getan?&quot; rief Vusi. &quot;Dieses Stroh war ein Geschenk für meine Schwester. Die Bauarbeiter gaben es mir, weil sie den Stock von den Obstpflückern kaputt gemacht haben. Die Obstpflücker gaben mir den Stock, weil sie das Ei für den Kuchen meiner Schwester kaputt gemacht haben. Der Kuchen war für die Hochzeit meiner Schwester. Jetzt habe ich kein Ei, keinen Kuchen und kein Geschenk. &quot;Was wird meine Schwester sagen?&quot;</p>
+<p>“Was hast du getan?“ rief Vusi. „Dieses Stroh war ein Geschenk für meine Schwester. Die Bauarbeiter gaben es mir, weil sie den Stock von den Obstpflückern kaputt gemacht haben. Die Obstpflücker gaben mir den Stock, weil sie das Ei für die Torte meiner Schwester kaputt gemacht haben. Die Torte war für die Hochzeit meiner Schwester. Jetzt habe ich kein Ei, keine Torte und kein Geschenk. „Was wird meine Schwester sagen?“</p>
 <center>
 <strong>9</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/13.jpg" /></p>
-<p>&quot;Was soll ich nur tun?&quot; rief Vusi. &quot;Die entlaufene Kuh war ein Geschenk als Gegenleistung für das Stroh, dass die Bauarbeiter mir gegeben haben, weil sie den Stock von den Obstpflückern kaputt gemacht haben. Die Obstpflücker gaben mir den Stock, weil sie das Ei für den Kuchen kaputt gemacht haben. Der Kuchen war für die Hochzeit. Jetzt gibt es kein Ei, keinen Kuchen, und kein Geschenk.&quot;</p>
+<p>“Was soll ich nur tun?“ rief Vusi. „Die entlaufene Kuh war ein Geschenk als Gegenleistung für das Stroh, dass die Bauarbeiter mir gegeben haben, weil sie den Stock von den Obstpflückern kaputt gemacht haben. Die Obstpflücker gaben mir den Stock, weil sie das Ei für die Torte kaputt gemacht haben. Die Torte war für die Hochzeit. Jetzt gibt es kein Ei, keine Torte, und kein Geschenk.“</p>
 <center>
 <strong>12</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/14.jpg" /></p>
-<p>Vusis Schwester dachte eine Weile nach und sagte dann: &quot;Vusi, mein Bruder, ich mache mir nichts aus Geschenken. Noch nicht einmal aus dem Kuchen! Wir sind hier alle zusammen, ich bin glücklich. Jetzt zieh deine schicken Sachen an und lass uns diesen Tag feiern!&quot; Und das tat Vusi!</p>
+<p>Vusis Schwester dachte eine Weile nach und sagte dann: „Vusi, mein Bruder, ich mache mir nichts aus Geschenken. Noch nicht einmal aus der Torte! Wir sind hier alle zusammen, ich bin glücklich. Jetzt zieh deine schicken Sachen an und lass uns diesen Tag feiern!“ Und das tat Vusi!</p>
 <center>
 <strong>13</strong>
 </center>
