--- a/stories/de/0294_omas-bananen.html
+++ b/stories/de/0294_omas-bananen.html
@@ -56,21 +56,21 @@ Ursula Nafula<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/03.jpg" /></p>
 
-<p>Eines Tages sah ich einen großen Strohkorb in der Sonne vor Omas Haus stehen. Als ich fragte, wofür er war, bekam ich nur die Antwort: “Das ist mein Zauberkorb.” Neben dem Korb lagen mehrere Bananenblätter, die Oma von Zeit zu Zeit wendete. Ich war neugierig. “Wofür sind die Blätter, Oma?”, wollte ich wissen. Die einzige Antwort darauf war: “Das sind meine Zauberblätter.”</p>
+<p>Eines Tages sah ich einen großen Strohkorb in der Sonne vor Omas Haus stehen. Als ich fragte, wofür er war, bekam ich nur die Antwort: „Das ist mein Zauberkorb.“ Neben dem Korb lagen mehrere Bananenblätter, die Oma von Zeit zu Zeit wendete. Ich war neugierig. „Wofür sind die Blätter, Oma?“, wollte ich wissen. Die einzige Antwort darauf war: „Das sind meine Zauberblätter.“</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/04.jpg" /></p>
 
-<p>Es war so interessant, Oma, die Bananen, die Bananenblätter und den großen Strohkorb zu beobachten. Aber Oma schickte mich auf einen Botengang zu meiner Mutter. “Oma, bitte lass mich dir zusehen bei der Vorbereitung…” “Sei nicht so ein Dickkopf, Kind, mach, was ich dir sage”, beharrte Oma. Ich machte mich schnell auf den Weg.</p>
+<p>Es war so interessant, Oma, die Bananen, die Bananenblätter und den großen Strohkorb zu beobachten. Aber Oma schickte mich auf einen Botengang zu meiner Mutter. „Oma, bitte lass mich dir zusehen bei der Vorbereitung …“ „Sei nicht so ein Dickkopf, Kind, mach, was ich dir sage“, beharrte Oma. Ich machte mich schnell auf den Weg.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/05.jpg" /></p>
 
-<p>Als ich zurückkam saß Oma draußen, aber ohne Korb noch Bananen. “Oma, wo ist der Korb, wo sind all die Bananen, und wo…” Aber die einzige Antwort darauf war: “Die sind an meinem Zauberplatz.” Was für eine Enttäuschung!</p>
+<p>Als ich zurückkam saß Oma draußen, aber ohne Korb und Bananen. „Oma, wo ist der Korb, wo sind all die Bananen, und wo …“ Aber die einzige Antwort darauf war: „Die sind an meinem Zauberplatz.“ Was für eine Enttäuschung!</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -84,21 +84,21 @@ Ursula Nafula<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/07.jpg" /></p>
 
-<p>Ich bekam einen Schreck als Oma rief. “Was machst du denn? Beeil dich und bring mir meinen Stock.” Ich lief schnell mit ihrem Gehstock nach draußen. “Worüber lachst du?”, fragte Oma. Da merkte ich, dass ich immer noch über die Entdeckung ihres Zauberplatzes lächelte.</p>
+<p>Ich bekam einen Schreck als Oma rief. „Was machst du denn? Beeil dich und bring mir meinen Stock.“ Ich lief schnell mit ihrem Gehstock nach draußen. „Worüber lachst du?“, fragte Oma. Da merkte ich, dass ich immer noch über die Entdeckung ihres Zauberplatzes lächelte.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/08.jpg" /></p>
 
-<p>Als Oma am nächsten Tag meine Mutter besuchte, rannte ich zu ihrem Haus, um noch einmal nach den Bananen zu sehen. Es gab ein sehr reifes Bündel. Ich nahm eine und versteckte sie in meinem Kleid. Nachdem ich den Korb wieder zugedeckt hatte, ging ich hinter das Haus und aß sie schnell. Es war die süßeste Banane, die ich je gegessen hatte.</p>
+<p>Als Oma am nächsten Tag meine Mutter besuchte, lief ich zu ihrem Haus, um noch einmal nach den Bananen zu sehen. Es gab ein sehr reifes Bündel. Ich nahm eine Banane und versteckte sie in meinem Kleid. Nachdem ich den Korb wieder zugedeckt hatte, ging ich hinter das Haus und aß sie schnell. Es war die süßeste Banane, die ich je gegessen hatte.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/09.jpg" /></p>
 
-<p>Als Oma am darauffolgenden Tag im garten Gemüse erntete, stahl ich mich davon und sah nach den Bananen. Fast alle waren reif. Ich konnte mich nicht beherrschen, ein Bündel mit vier Bananen zu nehmen. Als ich zur Tür schlich, hörte ich Oma draußen husten. Ich konnte die Bananen eben noch unter meinem Kleid verstecken und an ihr vorbei laufen.</p>
+<p>Als Oma am darauffolgenden Tag im Garten Gemüse erntete, stahl ich mich davon und sah nach den Bananen. Fast alle waren reif. Ich konnte mich nicht beherrschen, ein Bündel mit vier Bananen zu nehmen. Als ich zur Tür schlich, hörte ich Oma draußen husten. Ich konnte die Bananen eben noch unter meinem Kleid verstecken und an ihr vorbei laufen.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
@@ -112,7 +112,7 @@ Ursula Nafula<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/11.jpg" /></p>
 
-<p>Später am Abend riefen mich meine Mutter, Vater und meine Oma. Ich wusste warum. Als ich mich an dem Abend schlafen legt, wusste ich, dass ich nie wieder etwas stehlen konnte, nicht von Oma, nicht von meinen Eltern und mit Sicherheit nicht von irgendjemand anderem.</p>
+<p>Später am Abend riefen mich meine Mutter, mein Vater und meine Oma. Ich wusste warum. Als ich mich an dem Abend schlafen legte, wusste ich, dass ich nie wieder etwas stehlen konnte, nicht von Oma, nicht von meinen Eltern und mit Sicherheit nicht von irgendjemand anderem.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
