--- a/stories/de/0296_tom-der-bananenverkäufer_slides.html
+++ b/stories/de/0296_tom-der-bananenverkäufer_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/06.jpg" /></p>
-<p>&quot;In unserer Gemeinschaft verkaufen nur Frauen Obst.&quot;, sagen die Leute. &quot;Was ist denn das für ein Mann?&quot;, fragen die Leute.</p>
+<p>“In unserer Gemeinschaft verkaufen nur Frauen Obst“, sagen die Leute. „Was ist denn das für ein Mann?“, fragen die Leute.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/07.jpg" /></p>
-<p>Aber Tom gibt nicht auf. Er ruft: &quot;Kauft meine Bananen! Kauft meine süßen, reifen Bananen!&quot;</p>
+<p>Aber Tom gibt nicht auf. Er ruft: „Kauft meine Bananen! Kauft meine süßen, reifen Bananen!“</p>
 <center>
 <strong>6</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/11.jpg" /></p>
-<p>Bald ist der Korb leer. Tom zählt das Geld, was er verdient hat.</p>
+<p>Bald ist der Korb leer. Tom zählt das Geld, das er verdient hat.</p>
 <center>
 <strong>10</strong>
 </center>
