--- a/stories/de/0315_sakimas-lied.html
+++ b/stories/de/0315_sakimas-lied.html
@@ -49,7 +49,7 @@ Ursula Nafula<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/02.jpg" /></p>
 
-<p>Sakima lebte zusammen mit seinen Eltern und seiner vier Jahre alten Schwester. Sie lebten auf dem Land eines reichen Mannes. Ihre grasgedeckte Hütte stand am einer einer Baumreihe.</p>
+<p>Sakima lebte zusammen mit seinen Eltern und seiner vier Jahre alten Schwester. Sie lebten auf dem Land eines reichen Mannes. Ihre grasgedeckte Hütte stand an einer Baumreihe.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -63,28 +63,28 @@ Ursula Nafula<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/04.jpg" /></p>
 
-<p>Sakima machte viele Dinge, die andere sechsjährige Jungen nicht machten. Zum Beispiel konnte er mit den älteren Dorfbewohnern zusammensitzen und wichtige Themen besprechen.</p>
+<p>Sakima tat viele Dinge, die andere sechsjährige Jungen nicht taten. Zum Beispiel konnte er mit den älteren Dorfbewohnern zusammensitzen und wichtige Themen besprechen.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/05.jpg" /></p>
 
-<p>Sakimas Eltern arbeiteten im Haus des reichen Manns. Sie ging früh am Morgen zur Arbeit und kamen spät am Abend zurück. Sakima blieb bei seiner Schwester.</p>
+<p>Sakimas Eltern arbeiteten im Haus des reichen Manns. Sie gingen früh am Morgen zur Arbeit und kamen spät am Abend zurück. Sakima blieb bei seiner Schwester.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/06.jpg" /></p>
 
-<p>Sakima liebte es, Lieder zu singen. Eines Tages fragte seine Mutter ihn: “Wo lernst du diese Lieber, Sakima?”</p>
+<p>Sakima liebte es, Lieder zu singen. Eines Tages fragte seine Mutter ihn: „Wo lernst du diese Lieder, Sakima?“</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/07.jpg" /></p>
 
-<p>Sakima antwortete: “Sie kommen mir einfach, Mutter. Ich höre sie in meinem Kopf und dann singe ich los.”</p>
+<p>Sakima antwortete: „Sie kommen mir einfach, Mutter. Ich höre sie in meinem Kopf und dann singe ich los.“</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -98,7 +98,7 @@ Ursula Nafula<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/09.jpg" /></p>
 
-<p>“Kannst du es wieder und wieder singen, Sakima?”, bat ihn seine Schwester. Sakima stimmte zu und sang immer wieder.</p>
+<p>“Kannst du es wieder und wieder singen, Sakima?“, bat ihn seine Schwester. Sakima stimmte zu und sang immer wieder.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
@@ -112,21 +112,21 @@ Ursula Nafula<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/11.jpg" /></p>
 
-<p>“Was ist los, Mutter, Vater?”, fragte Sakima. Sakima erfuhr, dass der Sohn des reichen Mannes vermisst wurde. Der Mann war sehr traurig und einsam.</p>
+<p>“Was ist los, Mutter, Vater?“, fragte Sakima. Sakima erfuhr, dass der Sohn des reichen Mannes vermisst wurde. Der Mann war sehr traurig und einsam.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/12.jpg" /></p>
 
-<p>“Ich kann für ihn singen. Vielleicht stimmt ihn das wieder glücklich”, erzählte Sakima seinen Eltern. Aber seine Eltern lehnten ab: “Er ist sehr reich. Du bist nur ein blinder Junge. Glaubst du ein Lied hilft ihm?”</p>
+<p>“Ich kann für ihn singen. Vielleicht stimmt ihn das wieder glücklich“, erzählte Sakima seinen Eltern. Aber seine Eltern lehnten ab: „Er ist sehr reich. Du bist nur ein blinder Junge. Glaubst du ein Lied hilft ihm?“</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/13.jpg" /></p>
 
-<p>Trotzdem gab Sakima nicht auf. Seine kleine Schwester unterstützte ihn. Sie meinte: “Sakimas Lieder trösten mich, wenn ich Hunger habe. Sie werden auch den reichen Mann trösten.”</p>
+<p>Trotzdem gab Sakima nicht auf. Seine kleine Schwester unterstützte ihn. Sie meinte: „Sakimas Lieder trösten mich, wenn ich Hunger habe. Sie werden auch den reichen Mann trösten.“</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
@@ -147,14 +147,14 @@ Ursula Nafula<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/16.jpg" /></p>
 
-<p>Die Arbeiter unterbrachen ihre Arbeit. Sie hörten Sakimas wunderschönem Lied zu. Aber ein Mann meinte: “Niemand hat es geschafft, den Boss zu trösten. Glaubt dieser blinde Junge, dass er ihn trösten kann?”</p>
+<p>Die Arbeiter unterbrachen ihre Arbeit. Sie hörten Sakimas wunderschönem Lied zu. Aber ein Mann meinte: „Niemand hat es geschafft, den Boss zu trösten. Glaubt dieser blinde Junge, dass er ihn trösten kann?“</p>
 
 <div class="pagenum">15</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/17.jpg" /></p>
 
-<p>Sakima sang das Lied zu End und wollte sich auf den Heimweg machen. Aber der reiche Mann eilte aus dem Haus und sagte: “Bitte, sing noch einmal.”</p>
+<p>Sakima sang das Lied zu Ende und wollte sich auf den Heimweg machen. Aber der reiche Mann eilte aus dem Haus und sagte: „Bitte, sing noch einmal.“</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
@@ -168,7 +168,7 @@ Ursula Nafula<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/19.jpg" /></p>
 
-<p>Der reiche Mann war so glücklich, seinen Sohn wiederzusehen. Er belohnte Sakima für seinen Trost. Er brachte seinen Sohn und Sakima ins Krankenhaus, so dass Sakima seine Sehkraft wiedererlangen konnte.</p>
+<p>Der reiche Mann war so glücklich, seinen Sohn wiederzusehen. Er belohnte Sakima für seinen Trost. Er brachte seinen Sohn und Sakima ins Krankenhaus, damit Sakima seine Sehkraft wieder bekam.</p>
 
 <div class="pagenum">18</div>
 <p></div><div class="pagebreak"></p>
