--- a/stories/de/0324_als-ich-mein-zuhause-verließ-und-in-die-stadt-zog_slides.html
+++ b/stories/de/0324_als-ich-mein-zuhause-verließ-und-in-die-stadt-zog_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/03.jpg" /></p>
-<p>&quot;Stadt! Stadt! Richtung Westen!&quot; hörte ich einen Händler rufen. Diesen Bus musste ich nehmen.</p>
+<p>“Stadt! Stadt! Richtung Westen!“ hörte ich einen Händler rufen. Diesen Bus musste ich nehmen.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/10.jpg" /></p>
-<p>Dieses Geschehen wurde durch das Hupen des Busses unterbrochen, ein Zeichen, dass wir bereit für die Abfahrt waren. Der Händler rief den Straßenverkäufern zu auszusteigen.</p>
+<p>Dieses Geschehen wurde vom Hupen des Busses unterbrochen, ein Zeichen, dass wir bereit für die Abfahrt waren. Der Händler rief den Straßenverkäufern zu auszusteigen.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/14.jpg" /></p>
-<p>Aber in Gedanken war ich noch zu Hause. Wird meine Mutter in Sicherheit sein? Werden meine Hasen Geld einbringen? Wird mein Bruder daran denken meine Baumsetzlinge zu gießen?</p>
+<p>Aber in Gedanken war ich noch zu Hause. Wird meine Mutter in Sicherheit sein? Werden meine Hasen Geld einbringen? Wird mein Bruder daran denken, meine Baumsetzlinge zu gießen?</p>
 <center>
 <strong>13</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/16.jpg" /></p>
-<p>Neun Stunden später wachte ich von lautem Gepolter und Passagierausrufen für mein Dorf auf. Ich nahm meine kleine Tasche und sprang aus dem Bus.</p>
+<p>Neun Stunden später wachte ich von lautem Gepolter und der Passagieransage für mein Dorf auf. Ich nahm meine kleine Tasche und sprang aus dem Bus.</p>
 <center>
 <strong>15</strong>
 </center>
