--- a/stories/de/0337_kinder-aus-wachs.html
+++ b/stories/de/0337_kinder-aus-wachs.html
@@ -56,7 +56,7 @@ Southern African Folktale<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/03.jpg" /></p>
 
-<p>Sie stritten nie miteinander. Sie halfen ihren Eltern zu Haus und auf den Feldern.</p>
+<p>Sie stritten nie miteinander. Sie halfen ihren Eltern im Haus und auf den Feldern.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -84,7 +84,7 @@ Southern African Folktale<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/07.jpg" /></p>
 
-<p>Eines Tages war die Sehnsucht zu groß. Seine Brüder warnten ihn…</p>
+<p>Eines Tages war die Sehnsucht zu groß. Seine Brüder warnten ihn …</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -98,7 +98,7 @@ Southern African Folktale<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/09.jpg" /></p>
 
-<p>Die Wachskinder waren sehr traurig zu sehen, wie ihr Bruder dahinschmolz.</p>
+<p>Die Wachskinder waren sehr traurig sehen zu müssen, wie ihr Bruder dahin schmolz.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
