--- a/stories/de/0342_strafe.html
+++ b/stories/de/0342_strafe.html
@@ -49,14 +49,14 @@ Adelheid Marie Bwire<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/02.jpg" /></p>
 
-<p>Eines Tages holte Mama viel Obst.</p>
+<p>Eines Tages holt Mama viel Obst.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/03.jpg" /></p>
 
-<p>“Wann können wir etwas Obst essen?”, fragten wir. “Wir essen das Obst heute Abend”, sagt Mama.</p>
+<p>“Wann können wir etwas Obst essen?“, fragen wir. „Wir essen das Obst heute Abend“, sagt Mama.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -70,7 +70,7 @@ Adelheid Marie Bwire<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
 
-<p>“Guck was Rahim gemacht hat!”, ruft mein kleiner Bruder. “Rahim ist ungezogen und egoistisch”, sage ich.</p>
+<p>“Guck was Rahim gemacht hat!“, ruft mein kleiner Bruder. „Rahim ist ungezogen und egoistisch“, sage ich.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -84,21 +84,21 @@ Adelheid Marie Bwire<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/07.jpg" /></p>
 
-<p>Wir waren auch böse mit Rahim. Aber Rahim tut es nicht leid.</p>
+<p>Wir sind auch böse auf Rahim. Aber Rahim tut es nicht leid.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/08.jpg" /></p>
 
-<p>“Kriegt Rahim keine Strafe?”, fragt kleiner Bruder.</p>
+<p>“Kriegt Rahim keine Strafe?“, fragt kleiner Bruder.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/09.jpg" /></p>
 
-<p>“Rahim, dir wird es bald leid tun”, warnt Mama.</p>
+<p>“Rahim, dir wird es bald leid tun“, warnt Mama.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
@@ -112,7 +112,7 @@ Adelheid Marie Bwire<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/11.jpg" /></p>
 
-<p>“Mein Bauch tut so weh”, flüstert Rahim.</p>
+<p>“Mein Bauch tut so weh“, flüstert Rahim.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
@@ -126,7 +126,7 @@ Adelheid Marie Bwire<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/13.jpg" /></p>
 
-<p>Später entschuldigt sich Rahim bei uns. “Ich werde nie wieder so gierig sein”, verspricht er. Und wir alle glauben ihm.</p>
+<p>Später entschuldigt sich Rahim bei uns. „Ich werde nie wieder so gierig sein“, verspricht er. Und wir alle glauben ihm.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
