--- a/stories/ur/0291_ُوسی-کی-بہن-نے-کیا-کہا؟_slides.html
+++ b/stories/ur/0291_ُوسی-کی-بہن-نے-کیا-کہا؟_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/05.jpg" /></p>
-<p>لڑکے ُوسی کو تنگ کرنے پر شرمندہ تھے۔ ہم کیک کے لیے توتمہاری مدد نہیں کر سکتے، لیکن یہ چلنے کے لیے چھڑی اپنی بہن کے لیے رکھ لو۔ ایک لڑکے نے کہا۔ ُوسی نے سفر جاری رکھا۔</p>
+<p>لڑکے ُوسی کو تنگ کرنے پر شرمندہ تھے۔ ہم کیک کے لیے توتمہاری مدد نہیں کر سکتے، لیکن یہ چلنے کے لیے چھڑی اپنی بہن کے لیے رکھ لو۔ ایک لڑکے نے کہا، ُوسی نے سفر جاری رکھا۔</p>
 <center>
 <strong>4</strong>
 </center>
